--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,27 +1,31 @@
 ---
-title: 部分感染中共病毒的韩国人将可能无法参与总统选举投票
+title: 爆料革命的新生意——博彩业
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968026/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968151/)
 
-#### 撰稿：彩虹 
+#### 整理：雅典娜速记组
+编辑：开智则立
+![](https://assets.gnews.org/wp-content/uploads/2022/02/爆料革命的新生意-博彩业-.jpg)
+我们不动声色收购了一个英国赌场，现在我们要把战友也拉进来，这个赌场花费了5000多万美元，10%就是500万美金，总共不能超过11个股东。那么11个股东里边，51%一定是喜联储控股，这是必须的，那剩下的就是49%给战友，能出来十来个人，赌牌百分之百是咱们的。
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-612.png)图片来源：Time
-2月6日，《国家脉动》记者娜塔莉·温特斯（Natalie Winters）发文，报道韩国感染中共病毒（COVID-19）的选民将可能无法在韩国即将举行的总统选举中投票。
+他们是不同意让战友加入的，昨天晚上他们提出来，战友可以投，但不能超过30%。我说不行，战友必须49%。
 
-文章引述《韩国先驱报》（The Korea Herald）的内容说：“人们对COVID-19（中共病毒）患者是否无法在第20届总统选举中投票的问题越来越关注，因为那些在邮寄选票登记期之后被确认感染病毒的人可能无法在3月9日到投票站报到。”
+第二、不允许战友加入董事会。我说不行战友必须加入董事会。
 
-报道说，韩国的国家选举委员会（National Election Commission）有一个为期五天的窗口，接受邮寄选票的申请，在治疗中心居住的中共病毒患者和那些被隔离或自我隔离的人均可以使用。
+第三、管理费。老班长，昨天我们发信息说这个基金20%的管理费，挣的钱20%千万记住，战友你有5000万的管理费20%才多少钱，那是个毛毛的钱，一定给基金经理钱，他才能给你挣钱。
 
-《韩国先驱报》解释说：“在这段时间内登记的人将能够收到邮寄的选票，并通过向选举当局寄回选票来投票。”
+最后说那我们不能超过这个量，也不能让战友进入董事会，这样可以了吧？我说不行，战友一定要进入董事会，我们吸取了喜联储的教训，这次我们要选战友必须进入董事会。
 
-但是，对于那些在国家选举委员会接受邮寄选票申请的窗口期之外感染了中共病毒的个人，就没有任何保障其投票选举的措施。
+我跟律师在商量怎么要让七哥有一票否决权，来平衡双方，现在我还没想明白呢，这是个大事儿。
 
-但是，“有人警告说，到选举时，下个月每天新增的（中共病毒）病例可能超过十万例，这引起了人们的担忧，（这会导致）几十万选民无法在总统选举中投票。”对此，报道说，国家选举委员会正在讨论应对这一潜在危机的措施。
+*发布：开智则立*
 
-**新闻来源**
-
-[COVID Positive? In South Korea, You Might Be Barred From Voting](https://thenationalpulse.com/2022/02/06/covid-positive-people-may-be-barred-from-voting/)
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
