--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,29 +1,26 @@
 ---
-title: 日本拟实现每天完成100万次的接种目标
+title: 2022年5月后国内的民生会艰难到什么地步
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968012/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968118/)
 
-撰稿：东京樱花团/文小白
+#### 整理：雅典娜速记组
+编辑：开智则立
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2022年5月后国内的民生会艰难到什么地步-.jpg)
+这是很让人痛心的事情，咱们谈论这些美好的时候我一想到明年5月份或者世界，就觉得这是多么的黑暗。我最近干的事儿都是准备这个黑暗时期的到来，很多事情都跟这个有关系。那么国内呢？就是世界上最黑暗的时候，就像今天我们在直播当中，七哥吃着一盆菜的时候，阿富汗的人民被饿死，2300万人到2500万人没粮食吃，从一个处女四袋面现在是4个处女一袋粮食啊！这灾难就是此刻在直播的时候，我负法律责任的，我说的对不对？世界很冷漠，我们真没办法。我这几天尝试，我说我们法治基金拿出1000万美元来买点粮食发过去，他说关键是你怎么送过去呀？再一个粮食过去以后能到穷人手里吗？一系列的问题。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/日本拟实现每天完成100万次的接种目标.png)
+如果对台湾开战，台湾和大陆那就不是死一两个人的事，这时候就显示出咱们新中国联邦的重要。我们要布置一切，绝对不能让大牛、巴黎、天机、郑清、一叶菩提他们这些人在台湾被CCP给收拾了，不可以被饿死，那是不可能发生的事儿，我们绝不允许。
 
-据NHK2022年2月7日消息，为了加快新冠疫苗的第三次接种，岸田首相今天（7日）要求后藤厚生劳动大臣等有关部门，为争取在本月内尽快实现每天100万次的接种目标做好一切准备。
+那大陆明年是什么情况？这真的是救不了，我家人我也救不了，疫苗灾难的死亡和缺粮食。大家记住，你看咱现在都在减肥，让你3天不吃，饿的你就啥都吃，还什么喜不喜欢、干不干净？没那一说。国内基本上能回到一个现代的大跃进的时代！
 
-随着新冠疫情的持续蔓延，岸田首相6日在首相官邸与内阁官房长官松野、厚生劳动大臣后藤、新冠担当大臣山际、疫苗担当大臣堀内讨论对策，为加快第3次疫苗接种达成了一致。
+*发布：开智则立*
 
-为此，岸田首相今天（7日）向有关部门发出了指示。具体来说，就是加快接种疫苗速度，尽快实现每天接种100万次的目标。岸田还要求地方政府和企业配合实现此接种目标。
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-根据学校和托儿所感染扩大的迹象，岸田政府还将积极推动教职员工和托儿所老师的疫苗接种，以及警察和消防员的疫苗接种，以维持社会功能的正常进行。
-
-此外，将自卫队大型接种场会场的接种人数增加到与去年相同水平也是岸田政府近期的目标之一。
-
-资料来源：
-
-[岸田首相 ワクチン接種1日100万回 今月中達成に向けきょう指示](https://www3.nhk.or.jp/news/html/20220207/k10013470551000.html)
-
-*校对：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
