--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,29 +1,27 @@
 ---
-title: 华尔街日报母公司疑似被中共黑客攻击 数据被盗
+title: 中日财经爆&#124;中共国春节旅游人数和收入远不及疫情之前
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968008/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968104/)
 
 整理编辑：东京樱花团/peterwong
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/华尔街日报母公司疑似被中共黑客攻击-数据被盗.jpg)[图片来源](https://medium.com/hybrid-analyst/article-of-the-day-history-of-chinese-hacking-b7c656d89037)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/中共国春节旅游人数和收入远不及疫情之前.png)
 
-据华尔街日报出版商——新闻集团（News Corp）周五（2月4日）披露，疑似中共黑客入侵了该集团的电子邮件账户，并获取了一些记者的数据。但未透露相关记者人数。
+中共国文化和旅游部数据中心测算称，春节假期七天全国国内旅游出游人数和旅游收入同比均大幅减少，远不及中共病毒（新冠）疫情前2019年水平。
 
-新闻集团互联网安全顾问说，此次黑客攻击的目的可能是为北京收集情报，这次黑客入侵是在1月下旬发现的，影响了包括部分记者在内有限数量员工的电子邮件和文件。并称网络安全公司Mandiant已经控制了这次入侵。
+春节假期七天（1月31日至2月6日），全国国内旅游出游2.51亿人次，同比减少2%，只恢复到中共病毒（新冠）疫情前2019年春节假日同期的73.9%。旅游收入2,891.98亿元人民币，同比减少3.9%，只恢复到中共病毒（新冠）疫情前2019年春节假日同期的56.3%。
 
-Mandiant公司咨询部副总裁David Wong说，据信黑客“与中共国有联系，我们认为他们可能参与了间谍活动，以收集有利于中共国利益的情报。”
-
-新闻集团高管告诉他们的员工，“我们认为该活动影响了新闻集团总部、新闻技术服务公司(News Technology Services)、道琼斯、News UK和纽约邮报的有限数量的商业电子邮件账户和文件。”
-
-“我们的初步分析表明，外国政府的参与可能与这一活动有关，而且一些数据被窃取，”高管们说。
+中共国交通运输部称，春节假期七天，预计全国铁路、公路、水路、民航发送旅客1.3亿人次，比2021年同期增长31.7%，比2019年中共病毒（新冠）疫情前同期下降69.2%。
 
 消息来源:
 
-[**新闻集团部分电邮及文件被黑 怀疑与中国有关**](https://cn.reuters.com/article/wsj-news-group-hacking-0207-idCNKBS2KC02H?il=0)
+[**中国春节假期国内出游2.51亿人次同比减少2% 旅游收入同比降3.9%**](https://cn.reuters.com/article/spring-festival-travel-0206-sun-idCNKBS2KC01A?il=0)
 
 *编辑：东京樱花团/喜马拉雅的微尘
 发布：东京樱花团/老黑*
+
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
