--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,27 +1,28 @@
 ---
-title: 有声&#124;中共要求记者提前8小时集合
+title: 英国军方最新报告警告来自太空的核攻击
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1968004/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968088/)
 
-配音：香草山健身部 – 玫瑰园
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-当地时间2月5日，据日本新闻网络联盟NNN公布的一段视频，其中记录了中共在冬奥会开幕式前是如何折腾海外记者的。
+翻译：  Evalu
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3-10.jpg)
+图片来源：www.secretchina.com
 
-开幕式前8小时，中共就命令参与报道的海外记者集合，集合地距离举办开幕式的鸟巢仅30分钟车程。之后记者们被带到了另一个地方做安全检查，再又被拉回到了鸟巢周边，此时距开幕式还有整整6小时。而为了应对这种8小时的超长等待，中共当局要求记者们先填饱肚子再去集合。
+零对冲网2月6日报道，随着中俄两国雄心勃勃发展更强有力的武器包括超音速导弹，可以通过发射至地球大气层后针对地球另一半的目标发起攻击，难怪更多的西方政府正在检查其能力，即在人类的“最终前沿”—-太空方面，不仅是进攻性，也包括防御性。
 
-文字版原文：[中共要求记者提前8小时集合](https://gnews.org/zh-hans/1966468/)
+由英国国防部本周发布的一项新的报告，权威机构警告说攻击者可能潜在性地发展外太空的核武器，可以导致“民用设施或可能是针对目标的永久性的杀伤性武器”。
 
-音频处理/发稿：Daxia
+该报告称到目前为止政府为其公民日常生活所能提供的保护，將有赖于对太空的控制。英国的对手很有可能在未来的战争中很快超越。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpg)
+而在“太空优势”方面的维持控制是关键的，危险来自从网络攻击和电磁攻击到外太空的核攻击，例如由卫星制导的核导弹或从太空发射的导弹等。
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
+报告的结论很明确，英国和同盟国必须计划并投资，因为决定性的“太空竞赛”已经开始了。
+
+##### 新闻来源： [UK Military Warns About Risk Of Nuclear Attacks From Space In New Report](https://www.zerohedge.com/geopolitical/uk-military-warns-about-risk-nuclear-attacks-space-new-report)
+
+#  
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
