--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,37 +1,34 @@
 ---
-title: 郭文贵先生2022年2月6日盖特视频（2分54秒）全文字版
+title: 北京冬奥奥运团队开始对隔离酒店条件吐槽
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968002/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968080/)
 
-听写整理编辑：东京樱花团/Peterwong
+编译：花岗岩
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-95.jpg)
+图片来源：网路图片
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/郭文贵先生2022年2月6日盖特视频（2分54秒）全文字版.png)
+据美联社北京2月6日报道，一些不幸在北京奥运会上被检测出中共病毒（冠状病毒）阳性的奥运运动员认为他们的隔离条件使糟糕的情况变得更糟，食物不足，无法食用的饭菜，没有训练设备。
 
-尊敬的战友们好啊！今天上午这个直播完以后，很多战友给我发信息，包括加拿大的战友给我发信息，就是说七哥说这个关于加拿大的大卡车司机，在首都温哥华的抗议事件不能使用GTV直播，是不是什么都不能谈，什么都不能直播啊？
+俄罗斯冬季两项运动员瓦莱里娅·瓦斯涅佐娃（Valeria Vasnetsova）在Instagram上从北京的一个所谓的隔离酒店发帖说，“我的胃很痛，脸色很苍白，眼睛周围有巨大的黑眼圈，我希望这一切都能结束。我每天都在哭，实在太累了”。
 
-很多战友发信息，我在这给大家集体回复一下啊，兄弟姐妹们记住：什么都可以谈在GTV，你都可以用，所有战友都要用，积极的用，积极的谈加拿大这个卡车司机事件。
+她的问题不是病毒的任何症状，而是食物。瓦斯涅佐娃周四发布了一张她所说的 “已经吃了五天的早餐、午餐和晚餐 ”的照片，托盘上的食物包括普通意大利面、橙汁、骨头上的焦肉、一些土豆，没有蔬菜。
 
-我们说的三个不能，我跟Eric“湿男”学的三个不能：
+她说，她主要靠几块意大利面生存，因为“不可能 ”吃其他东西，“但今天我吃了他们提供的所有脂肪，而不是肉，因为我非常饿。”她补充说，她的体重下降了很多并且骨头已经显现出来了。
 
-第一个不能，就你不要在GTV上打着“爆料革命和新中国联邦的爆料革命的旗帜”来支持大卡车司机搞暴力行动，记住“搞暴力行动”，他不搞暴力行动，咱现在的情况随便报，随便说，随便直播。
+隔离酒店越来越成为此次奥运运动员及其团队的批评对象，他们正在游说组织者进行改进。隔离缺乏透明度，只有一些病毒呈阳性的运动员被迫进入其团队无法进入的隔离酒店，而处于类似情况的队友则被允许在奥运村内进行隔离。
 
-第二个，不能在采访当中鼓动对方，煽动对方说“你要搞爆料，你要搞撞人呐，暴力啊”，是吧？甚至呢嗯（海东先生的手怎么伸这来了？哇，郭老板，你看我行吗？这样。太漂亮了,too beautiful现在流行啊，郭老板你觉得,怎么样啊？我就是你的了,是吧？)所以说兄弟姐妹们就不要再是用GTV直播鼓动对方搞暴力和参与暴力，这是两个不允许的。
+对检测出阳性的运动员的规定是，没有症状的人要到专门的酒店进行隔离。任何有症状的中共病毒患者将被送往医院。在这两种情况下，他们将不能参加比赛，直到被允许出院。
 
-最后一个不允许的,在GTV上啊代表你的观点，发你个人也好，谁也好,就这么说，“我觉得你该暴力，你该杀人，你该撞人，你该撞车什么要这……”千万不要！千万不要！
+各国代表队已经开始公开批评。
 
-就这三样，不要啊：不要在GTV上煽动鼓动人家搞暴力。第二个，不要以爆料革命新中国联邦的名义搞暴力啊。第三个，不能在现场，在直播当中体现出代表GTV“我们什么GTV告诉大家，你们去搞着去搞暴力去啊”，这不可以的。
+在三届北欧综合运动会金牌得主埃里克·弗伦泽尔检测出阳性后，德国代表团团长德克·希梅尔普芬尼格（Dirk Schimmelpfennig）对 “不合理 ”的生活条件进行了抨击。他在FAZ报纸报道的评论中说，德国希望有更大、更卫生的房间，以及更正规的食物供应，以便最终被释放的运动员仍然适合参加比赛。
 
-不要在GTV成为鼓动煽动暴力的部分，也不能代表新中联邦和爆料革命。除此之外，你想咋播你咋播，你播越多越好，是吧？播越多越好啊。
+比利时俯式雪橇运动员金·梅勒曼斯被从隔离酒店带回了运动员村的隔离区，她的主要怨言是缺乏信息。她被装进一辆救护车，在她以为自己会被释放的那一天从一个隔离设施运到另一个隔离设施。
 
-对了，我忘了啊，后来我说的那个成名的啊两次，第二次让七哥阳痿的人跟海东兄弟很熟，你问他对吧？开玩笑啊，都是开玩笑，没办法当真的，这都是开玩笑，关于海东兄弟都是开玩笑，关于我都是真的，姆该噻了。
+瓦斯涅佐娃在隔离区的时间发现运动员们得到的食物更差，并用一张为她同样隔离的队医提供的食物图片强调了这一点。她不明白，为什么对运动员有这种态度？
 
-稿件仅作参考，最终以郭文贵先生盖特视频内容为准。
+新闻来源：[Olympic teams raise concerns over quarantine hotels](https://apnews.com/article/winter-olympics-quarantine-hotels-e2d2ffc60d9800cf1951cc3eaed323cb)
 
-郭文贵先生2022年2月6日盖特视频链接：[https://gettr.com/post/pswoyr9fbf](https://gettr.com/post/pswoyr9fbf)
-
-*校对：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
