--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,31 +1,24 @@
 ---
-title: 美国发出警告：中俄结盟抗美 后果严重！
+title: 秘翻在线：什么样的诱惑，能使她的父母做出了如此愚蠢的选择？
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968122/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968229/)
 
-整理编辑：东京樱花团/peterwong
+撰稿：待命（文暁）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-11.png)（图片源自本文链接）
+2月7日时事通信社消息：据法新社报道，一名参加北京冬奥会花样滑冰团体赛的中国籍选手在表演中摔倒后在社交媒体上受到严厉批评。据信中共国正在审查有关该运动员的帖子。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/美国发出警告：中俄结盟抗美-后果严重！.png)[图片来源](https://www.theguardian.com/us-news/2021/jan/20/biden-press-briefing-jen-psaki-white-house-secretary)
+在美国出生和长大的Beverly Zhu，现中共国公民朱易，看似很紧张的出现在团体赛的女子单人滑赛场，没有发挥出预想的水平。等待发表分数时的她似乎在强忍泪水。
 
-针对中俄结盟抗美的联合声明，美国和北约作出回应。美国白宫提醒中共，如果俄罗斯与乌克兰爆发武装冲突，这将会影响到中共国的国际利益。北约领导人果断拒绝了中俄要求北约停止东扩的主张。
+在中共国版推特之微博上，一篇带有 “朱易摔倒 “标签的帖子被浏览了2.3亿次，但该标签后来被封，6日下午，这个帖子不再出现在搜索结果中。而另一个带有 “朱易失败 “标签的帖子仍然有效，浏览量超过8000万次。
 
-白宫新闻秘书莎琪周五（2月4日）对记者表示，“我们已经（向中方）传达了一个信息：欧洲如果发生一场破坏稳定的冲突，这将会影响到中共国在世界各地的利益，中共国当然应该明白这一点。”
+于2018年更改了国籍的朱易说：因为第一跳没成功而心力交瘁，在最后一跳的落地时感到压力很大，不幸的是我失败了。
 
-莎琪说，美国和中共国保持“很高层级的直接接触”。“我们目前关注的焦点是继续团结盟友和合作伙伴，一旦俄罗斯入侵乌克兰，（我们将共同）作出果断回应。”
+然而，互联网上少见对朱易的同情，有些人还对队员的选拔提出了质疑。有个人说：“陈虹伊要好得多，我不明白为什么像她这样的人会被选入中国队”。 “另一个人补充说：”压力太大。想知道，有没有一个球员可以在不感受到国家和人民的压力的情况下参加奥运会？”。
 
-斯托尔滕贝格表示，北约正在密切关注着中共国和俄罗斯加强军事合作的动作。
+翻译这篇报道，使我想起了郭先生的话：跟着共产党，走进火葬场。出生于２００２年的朱易，２０１８年的时候１６岁，还不是个成年人。她的父母把她生在了自由国家，又亲手把她送回了反人类国家。是什么样的诱惑，能使她的父母做出了如此愚蠢的选择？所以，朱易的压力，既可怜又可恨！
 
-俄罗斯总统普京周五与中共国国家主席习近平发表了联合声明，对北约东扩表示反对。俄罗斯在俄乌边界部署十几万大军向乌克兰施压。
+信息源：[フィギュア団体で転倒、中国籍取得の選手にSNSで批判殺到（ＡＦＰ＝時事） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/b3efbbd26e9d5bc42d8f3f70a6e98eab57df8662)
 
-美国负责东亚和太平洋事务的助理国务卿丹尼尔·克里滕布林克（Daniel Kritenbrink）周五对媒体表示，如果俄罗斯选择对乌克兰再次入侵，这将会致中共于非常“尴尬的”境地，因为这就意味着中共国愿意“容许或者是默许”俄罗斯对乌克兰进行胁迫。
-
-消息来源:
-
-[中俄结盟麻烦多，白宫提醒北京小心后果](https://www.voachinese.com/a/u-s-warns-conflict-would-hurt-china-s-interests-ukraine-update-20220205/6428010.html)
-
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
