--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,35 +1,50 @@
 ---
-title: 澳洲政府明确指示大学：远离中共并与英美加强合作
+title: 单伟健在杨贝贝虚假采访背后的金融运作
 ---
-`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/1967949/)
+`加拿大温哥华扬帆农场 Himalaya Sailing Farm (CA)` [轉載自GNews](https://gnews.org/zh-hans/1968053/)
 
-整理/编辑：小红帽
+加拿大温哥华扬帆农场：薇文viven
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/dfef.png)图片来源：雅典娜设计组(614)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/a-3-edited.jpg)图片来源：weibo
 
 
-根据《澳大利亚人报》2月7日报道，澳洲政府发出“明确信号”，要求澳大利亚大学与英国和美国大学进行更紧密的合作，以实现市场多样化，并脱离与中共国的研究合作。
+前段时间HBO Vice 散播种族歧视和恶意诋毁爆料革命和郭文贵先生的视频，背后有中共巨资借用“腾讯音乐娱乐”(TME)操作平台，利用海外金融投资公司“太盟集团”(PAG)  和“德太资本”(TPG)，通过中共特务单伟建和王岐山家族的孙强两人处心积虑运作的结果。
 
-澳大利亚八所研究最密集的大学的八校联盟（Group of Eight）本周与英国的罗素集团（The Russell Group）举行了一次圆桌会议，讨论深化双方的关系。
+单伟建的太盟在2017年持股9.8%成为 TME的第二大股东；2018年 腾讯音乐在美国上市，太盟靠出售美国存托凭证募资$5,700 万美元，并继续持股 9% ；
 
-这次圆桌会议是在AUKUS澳英美协议和与英国的自由贸易协定之后发起的。该协议促进了英国和澳大利亚在新技术和国防相关科学商业化方面的合作。
+华纳公司旗下的HBO2013年与腾讯签约入驻中国，2018年因主持人嘲讽习近平为“维尼熊”后，一直被中共封杀，失去每年近50%增长的华纳损失惨重。
 
-八校联盟首席执行官维姬·汤普森（Vicki Thompson）表示，虽然大学不一定想脱离（与中共）现有的伙伴关系，但大学已经在与中共合作方面收到了明确信息。
+单伟建出手使用金融手段控制华纳： TME投资 “华纳音乐”的股权2%、双方成立合资公司、允许华纳音乐向TME的经营者授权，华纳公司和华纳音乐的股价双双开始飙升。
 
-澳大利亚国立大学（ANU）安全学院院长罗里·梅德卡夫（Rory Medcalf） 表示，深化澳英研究合作是“对新地缘政治现实的合理回应”。
+孙强运作的德太资本2017年就已投资 HBOVice 达$4.5亿，2019年，有中金资本的平台撑腰，又注资$4500万美元，助HBOVice上市，但至今未成功。
 
-当被问及政府是否已经向大学发出远离中共国研究合作的信号时，代理教育部长斯图尔特·罗伯特（Stuart Robert）说，他 “欢迎 “这次圆桌会议的举行。
+中共蓄谋已久，花费高昂代价，吃准华纳和HBO逐利的贪婪本性，用单伟建和孙强两路夹击，犁庭扫穴，使之成为中共作恶的工具和替罪羊。中共因惧怕新中国联邦而导致的又一愚蠢行径，不断为全球灭共逆增上缘。
 
-新闻链接：[澳大学收到“明确信号”：与英美加强研究合作 远离中国](https://cn.theaustralian.com.au/2022/02/07/63268/)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/f.jpg)图片来源：GNEWS
 
-*发布： tianzhihuan*
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+参考资料：
+
+[Tencent Music Entertainment: China’s Largest Online Music Entertainment Platform Operator](https://seekingalpha.com/article/4412340-tencent-music-entertainment-online-music-entertainment-platform-operator)
+
+[HBO Website Is Down in China After John Oliver Skewers Xi Jinping on Last Week Tonight](https://time.com/5321945/hbo-china-john-oliver-xi-jinping/)
+
+[Private Capital-backed Tencent Music Raises US$1.1 Billion in Initial Public Offering (Asia)](https://www.globalprivatecapital.org/newsroom/private-capital-backed-tencent-music-raises-us1-1-billion-in-initial-public-offering-asia/)
+
+[SEC FORM F-1 Tencent Music Entertainment Group 2018.10](https://www.sec.gov/Archives/edgar/data/1744676/000119312518290581/d624633df1.htm)
+
+[Warner Music Partners With Tencent on Joint Venture Record Label in China](https://www.hollywoodreporter.com/news/music-news/warner-music-partners-with-tencent-on-joint-venture-record-label-in-china-4154621/)
+
+[腾讯音乐娱乐集团(TME)公司深度报告](http://pdf.dfcfw.com/pdf/H3_AP201901281289167588_1.pdf)
+
+[TPG与中金资本成立 “中国协同效应”平台](https://www.financialnews.com.cn/zq/pevc/201901/t20190110_152759.html)
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/e-edited.jpg)图片来源：sjmrw
+
+
+* * *
+
+编辑发稿：硫酸羟氯喹64
 
  
 
