--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,24 +1,23 @@
 ---
-title: 谈国内情况（一）
+title: 悉尼一家殡仪馆的工作人员呼吁不要给儿童接种新冠疫苗
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1967835/)
+`喜国公民` [轉載自GNews](https://gnews.org/zh-hans/1967977/)
 
-整理：雅典娜速记组
-编辑：皮特
-![](https://assets.gnews.org/wp-content/uploads/2022/02/谈国内情况一--scaled.jpg)
-直播时间：2022.01.26
+By：喜国公民
+视频来自网络
+一位在悉尼的一家殡仪馆工作的人士，在一次聚会时接受了采访，披露了自从澳洲政府实施了新冠疫苗强制接种政策后，在她工作的殡仪馆所发生的事情。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-59.png)图片来自网络
+这位女士在接受采访时，身穿一件白色运动衫，上面印着，“殡葬业，我们已经经历过了”。她说，正在发生很多事情，如果人们还没有意识到问题的严重性，婴儿死亡的数量会继续增加。
 
-长岛哥：我们也难以想象，那过去五年的爆料革命每一天都是有这10分钟组成的，那过去我们现在做了多少？我相信用一句话过去，我们现在讲过了一分钟我们都无法经历的事情，我想在我们现在是每天在发生，每分钟在发生，所以很感动。但是我始终相信这今天这个事情对我们来说很大的事情，但是对爆料革命对新中国联联邦队灭共来说，我相信这只是刚刚开始！未来还有更大的比这个还要大几十倍几千倍的事情会发生，我们得提前做好心理准备，迎接这个更多的重大的时刻的到来！好了，我就讲这些，那我们再请那个海东兄再给大家讲讲，刚才没讲完。
+很多成年人和婴儿正在死去。年轻人由于心脏病发作，中风和血栓而丧命。奇怪的是，在死亡文件上注明的死亡原因是无法确定，这令人无法理解。
 
-海东：我们一直这个沉浸在这种喜悦当中啊，而且确实这种幸福来得太突然啊，根本这个忽然一下好像这个有点儿承受不了，是的，我都说吧，打世界杯，我们出线我都没有这么高兴过，这么开心！这么无法形容这种内心的激动，因为这种事情不是说我能去通过我的努力，如果我按照这个训练，按照这个去努力，按照这个一定会赢，一定会达到这种水平，是吧？就像这个你说在一年前五年前告诉中国人告诉我郝海东，我说过，两年啊，美国大使馆都撤了啊，都断交了，脱钩了都这是吧？！美国会拿出来一个，说反人类罪种族大屠杀认定你中国共产党是吧？
+很多家人选择不举行殡葬仪式，尸体直接火花。这可能是由于死亡人数太多，殡仪馆的殡葬仪式大排长龙，无法满足死者家属的要求，虽然殡仪馆的工作人员已尽全力地工作。
 
-发布：*皮特*
+由于尸体太多，有些殡仪馆正在安装超大的可以容纳20具尸体的冷冻柜。有的殡仪馆订购了8个这样的冷冻柜，来临时储藏多达160具尸体。
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+这位女士奉劝那些还不明真相的民众，看看殡仪馆目前的状况，慎重考虑是否要接种新冠疫苗。她不想看到孩子们被接种新冠疫苗，而给他们带来伤害。但是，从目前的形式来看，不容乐观。她预测，如果人们不醒悟，给儿童接种新冠疫苗一定会发生。
+
+这位女士呼吁，不要给孩子接种新冠疫苗。新冠疫苗给人类带来的是绝对的损害！
 
  
 
