--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,31 +1,44 @@
 ---
-title: 最新研究显示：封锁对疫情防治无效
+title: 墙内世界2022/02/03
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1967715/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1967282/)
 
-撰稿：小毛牛
+一、2月2日，中国北京。最繁忙的火车站由于中共政府举办冬季奥运会的严格流动限制而变得空荡荡。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/020512.jpg)马里兰州巴尔的摩市约翰霍普金斯大学标志特写。图片来源：iStock。
+二、1月29日，河北保定。中共在高速路入口处出现了荷枪实弹的持枪警察，意图向百姓传达高压威慑的氛围。
 
-根据约翰霍普金斯大学（Johns Hopkins University）的研究分析显示：在 2020 年春季的第一波新冠疫情期间，封锁仅将美国和欧洲的新冠肺炎死亡率降低了 0.2%。 研究者还认为，封锁对人们的身心健康没有任何好处，但封锁却被广泛的采用且给被封锁地区造成了巨大的经济和社会成本。因此，封锁政策是没有根据的，应该被拒绝作为流行病政策工具。
+三、1月31日，浙江杭州。中共持续以防控疫情的借口，逐步加大各省市人员流动的限制。
 
-然而，既是意料之外又是意料之中的事是，约翰霍普金斯大学的此项研究成果并没有在五个自称自由网络中的任何一个上得到提及。根据 Grabien 的文字记录，CNN、MSNBC、ABC、CBS ，和 NBC 全都对反封锁的调查结果置若罔闻！
+四、1月31日，广东深圳。凡是被中共政府通报新冠病毒确诊病例的城市，即意味着当地全体居民失去更大程度的人权和自由。
 
-更令人惊呼的是，根据搜索结果，其他众多纸质媒体比如纽约时报、华盛顿邮报、美联社、路透社、今日美国、Axios、Politico 等也都对该该研究结果视而不见！
+五、1月31日，广东深圳。中共政府核酸检测政策的执行并不是想要真正防控疫情扩散，只是为了让百姓失去更多的话语权。
 
-此外，研究人员还研究了就地庇护令以及其他锁定措施对疫情防治的影响，发现此举（限制聚会）将实际上增加了 COVID-19 的死亡率。实际上可能增加了 COVID-19 的死亡率。因为就地庇护令可能会将感染者在家中与其家人隔离，但此人会使其家人暴露在高病毒载量的环境中，从而导致家人患更严重的疾病。
+六、2月1日，湖北武汉。一商场电梯突发故障，包含老人和6岁儿童的十几人被困地下二层。
 
-通常情况下，封锁限制了人们进入海滩、公园和动物园等安全的户外场所，而迫使人们在不太安全的室内场所聚会。因此，研究人员发现降低 COVID-19 死亡率的唯一干预措施是关闭非必要业务，可以将死亡率降低了 10.6%，比如酒吧。
+七、1月28日，浙江湖州。一大桥护坡深夜垮塌，十余辆轿车被砸。
 
-研究人员还指出了封锁还导致其他意想不到的后果，例如失业率上升、学校教育减少、家庭暴力事件增加以及吸毒过量等。
+八、1月29日，重庆。银行门口取钱队伍排起长龙。全国银行门口频繁出现了取现金困难的场景。银行的钱都去哪儿了？
 
-根据 CDC 的数据，从 2020 年 5 月到 2021 年 4 月，美国记录了 100,306 例药物过量死亡，比前 12 个月期间记录的 78,056 例死亡人数增加了 28.5%。去年，全国 COVID-19 和刑事司法委员会的一项研究发现，在发布封锁令后，美国的家庭暴力事件增加了 8.1%。
+九、近日 中共三部门发文：2022年3月1日起，个人存取现金超5万元需登记资金来源。百姓手里的钱自由流动将会可预见的更加困难。
 
-约翰霍普金斯大学研究的研究人员写道：“必须将这些社会成本与封锁的好处进行比较，我们的荟萃分析表明，封锁的好处充其量是微不足道的。” “这种标准的收益成本计算得出了一个强有力的结论：应该立即拒绝将封锁作为一种流行病政策工具。”
+十、1月28日，上海。中共国没有市场经济，在中共国无证寸步难行。中共官方称一女子在没有烟花销售许可证的情况下，从外地购入烟花爆竹4箱，在网上加价转卖获利1800余元，被依法行政拘留。
 
-新闻链接：[CNN, MSNBC, NYT, WaPo completely avoid Johns Hopkins study finding COVID lockdowns ineffective](https://www.foxnews.com/media/johns-hopkins-university-study-lockdowns-media-blackout)
+十一、2月1日早上7点半，陕西大荔。男子放炮后仅20秒禁放宣传车赶到，对其进行了批评教育。中共在监控人民方面从来不会缺经费和人员。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
+*搜集：Free20200604、加油干吧总加速师、Filon |听写：trustguo | 翻译：叶知秋|校对：yyshere*
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
+
 
  
 
