--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,32 +1,25 @@
 ---
-title: 中日财经爆&#124; 美国将中共国进口光伏设备关税延长4年
+title: 美国家安全顾问苏利文：外交抵制奥运会是“原则性声明”
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968066/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968169/)
 
-整理编辑：东京樱花团/peterwong
+#### 撰稿：彩虹       
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/美国将中共国进口光伏设备关税延长4年.png)[图片来源](https://www.crushpixel.com/stock-photo/engineer-working-on-checking-maintenance-2787861.html)
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/16442056741.png)图片来源：Global Village Space
+周日，国家安全顾问杰克·苏利文（Jake Sullivan）说，尽管只有少数几个国家加入了外交抵制北京冬奥会，但对北京冬奥会的外交抵制是一项“原则性声明”。
 
-美国总统拜登周五（2月4日）将川普时期主要针对中共国的进口光伏设备关税延长四年，但作为对安装商的一项重大让步，拜登也放宽了条款，将在美国大型项目中占据主导地位的面板技术排除在征税范围之外。
+在参加NBC（美国全国广播公司）的电视节目“与媒体见面”（Meet The Press）时，主持人查克·托德（Chuck Todd）问苏利文，只有其他九个国家与美国采取了相同立场，不派官员参加奥运会，而一些盟友似乎优先考虑的是与北京的经济关系，这是否令人失望？
 
-根据白宫声明，这项延长四年的关税豁免了双面太阳能板(bifacial panel)，这种电池板可以两面发电，颇受大型开发商青睐。在川普开始征收关税时，这种技术刚刚起步，但现已用于多数美国大型太阳能设施。
+苏利文回答说：“我不得不说，你问题的前提不太正确。美国并没有到世界各地去敲每个国家的门，试图‘组织一次外交抵制’。我们所做的是站出来，就我们美国要做的事情发表原则性声明。”
 
-拜登政府还为来自邻国加拿大和墨西哥的免税供应打开了通道，这两个国家目前占美国的进口量不到1%。
+苏利文认为，虽然美国及其欧洲盟友在抵制北京奥运会上没有团结一致,但在世界舞台上与中共国对抗方面却有了更广泛的合作。
 
-前总统川普在2018年使用1974年贸易法案第201条规定的授权，对光伏产品进口产品实施了为期四年的关税措施，一开始税率为30%，在最后一年下降到15%，希望藉此在美国太阳能制造业创造就业机会。
+他说：“但是，如果你看看与我们的欧洲伙伴，什么四国集团（Quad），与我们的亚洲盟友的广泛一致程度，你可以看到志同道合的民主国家在面对中共构成的一系列挑战时是并肩同行的，无论是在军事侵略领域、经济胁迫领域还是在人权领域。”
 
-这些措施原定2022年2月6日到期，但一些美国太阳能制造商去年寻求延期，认为他们的产品仍然无法与海外制造的商品竞争。这些商品主要来自中共国，在美国市场占据主导地位。他们举出一些不利因素，包括公司在关税生效前的进口囤积、中共病毒（新冠)疫情的经济影响以及成本上涨等。
+**新闻来源**
 
-消息来源:
-
-[拜登政府将特朗普时期光伏进口关税延长四年 但条款有所放宽](https://cn.reuters.com/article/usa-solar-tariffs-0204-fri-idCNKBS2KC00J?il=0)
-
-[中日财经爆|美国考虑延长来自中共国太阳能进口关税](https://gnews.org/zh-hans/1922536/)
-
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+[Sullivan: Diplomatic boycott of Olympics a ‘statement of principle’](https://thehill.com/homenews/sunday-talk-shows/593038-sullivan-diplomatic-boycott-of-olympics-a-statement-of-principle)
 
  
 
