--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,37 +1,36 @@
 ---
-title: 中共统治下的人间惨剧
+title: 中共欲借冬奥会洗白侵犯人权罪行
 ---
-`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1968025/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968147/)
 
-作者：香草山健身部-新世界的一员
-![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
-江苏丰县“八个孩子妈妈被虐待精神失常疑遭拐卖事件”持续在社交媒体发酵，阅读量高达近16亿次。但除官方通报与一众自媒体外，权威机构媒体——特别是以调查或深度报道见长的媒体，几乎集体失声。 由此1988年一个叫武勤英记者经过亲自查证撰写了《女研究生如何被拐骗?》——采访《沉重的思考——对11位女研究生被骗案的追踪采访》被再次挖掘，出现在公众面前。
-这是一篇在全国曾经引起过轰动的报道，一个女研究生因为撰写论文去农村采风，体验，被人贩子拐卖以后，被锁在屋中71天，屋里的床没有床板，是用高粱秆当床铺，上面铺了一床旧粗布单子。屋里没有一张桌子，一块破水泥板下面垫上一摞土坯就是一张桌子了，桌子上荡满了灰尘，来自上海的女研究生就在这样的环境下，被逼着与一个大字不识的、满脸萎琐的、窝窝囊囊的老农民结婚，她当然要拼死相争，就遭到了村里人的群殴，身强力壮的几个汉子揪住她的头发，扒掉她的鞋子，把她强行摁到床上强行进行奸污之事。
-悲剧的发生竟然是一个纯真、善良、毫无识别能力的高级知识分子遇见了一个因贫困而变的邪恶，无知加贪婪、就铤而走险的这么一个文盲的不法分子。无本钱的利润驱使下演绎出的这一个难以想象，是任何人听了都感觉激愤，撕心裂肺、痛不欲生的人间悲剧。
-花2480元就能买到一个水灵灵的大姑娘，在如此明显犯罪的实施中，买家和卖家竟然没有任何阻碍，而且在反抗时还有帮凶，逃跑就被锁住，这是有法律有法治的社会吗，这是中国共产党带来的惨无人道的流氓社会。
-如果买卖婚姻是被例入为犯罪，是必须被判重刑的话，是可以杜绝的，如果不是当地政府部门睁一只眼闭一只眼，是不可能被非法长时间关锁的，如果中共选的村干部但反有一点点人性，就不可能出现村里几个人合帮的奸污罪事，如果农村不是如此贫困如此封闭，就不会有如此惨剧的发生，农民在文化、经济、精神的三重贫困下造成的愚昧，犯下了这惨无人道的罪恶。
-是中共践踏文化，控制经济，法律虚设，导致悲剧重复重演，中共不灭，地狱之门永无法关闭。
-据武勤英当时查看的郓城县公安局1988年《关于打击拐卖人口、解救妇女儿童的情况报告》里面有这样的记载：
-在我县被拐卖的妇女中，有9名因抗拒成婚，不堪受辱而自杀。”在大人乡徐庄村、王井乡王皮村，两名少女都是在卖身的5天之内自杀的。至今尚未查明死者的身份和地址。
-一位怀孕7个月的外地妇女来菏泽看牡丹花会，被犯罪分子骗卖。因不同意与买主同居，而被买主兄弟数人扒光衣服按在床上，当众让买主强奸。
-郭屯镇傅宦屯村傅东良，男30岁，以800元钱买一11岁的幼女(四川人)同宿奸淫半年之久。”
-由于拐卖人口的犯罪活动，杀人、伤害、强奸等刑事案件不断发生。杨庄集乡程屯村一男青年将买来不从逼婚的‘媳妇’连砍7刀，造成重伤。”
-被拐卖女方不从逼婚而被转手倒卖的案件也时有发生。湖北省红安县一38岁妇女被拐卖到郓城后，半年时间被倒卖8次，每次转卖都抬高价格，由最初的700元抬到1700元。
-这份公开的报告上记载着这样的数字：自1978年至今(1988年)，共有2700余名外地妇女流入该县。其中14岁以下16名，14—18岁75名，18岁以上1900余名。其中未婚妇女占70%，已婚的占30%。
-而这些数据还是几十年前的数据，在伟光正的党旗下，贩卖人口的案例一路有增无减，如今怕是连真实数据都未必能得到。
-针对如此的社会丑恶现象，竟然数十年不曾改变过，多少家庭因此家破人亡，良知的笔尖流淌出来的是带血的笔锋，唯有发挥出匕首投枪般的锋利，才是射向共产党心脏的子弹！
+整理编辑：东京樱花团/peterwong
 
-校对/发稿：菩提树
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2月-2.jpg)
-**更多资讯，更多关注**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/中共欲借冬奥会洗白侵犯人权罪行.png)[图片来源](https://news.cctv.com/2021/12/15/ARTIO3O3IJuCsGbJxvOvRTwn211215.shtml)
 
-[**纽约香草山农场GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+北京冬奥会2月4日在中共国国家体育场“鸟巢”举行开幕式，最后一棒的两名火炬手中，其中一人是来自新疆的维吾尔族运动员迪妮格尔．衣拉木江。人权组织表示，中共“侵犯人权的行为，无法用体育洗白”，呼吁要让北京的宣传产生适得其反效果，借此引起人们对这类国家恐怖主义的关注，并形成全球运动。
 
-[**纽约香草山农场GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+20岁的迪妮格尔来自新疆阿勒泰地区，在被选为最后2棒火炬手的同时，正值许多西方国家因中共迫害维吾尔族等少数民族，对冬奥进行外交抵制。
 
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+美国驻联合国大使批评，此举是中共意图分散外界对少数民族种族迫害的关注。
 
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+联合国和人权观察等组织均表示，中共将多达100万维吾尔族穆斯林关押在集中营，他们受到虐待和权利侵犯。
+
+冬奥会开幕前，各国陆续宣布进行外交抵制，因为中共“正在进行种族灭绝和反人类罪”，并在推特写道“侵犯人权的行为，无法用体育洗白”。
+
+分析显示，中共选择维吾尔女运动员做火炬手，是为掩饰指责其侵犯人权的说法，刻意标榜“一切正常”，却无法掩饰恶行。
+
+人权组织明确指出，维吾尔人“面临着系统的、国家组织的大规模监禁、酷刑和迫害，构成反人类罪”，他们被关押在所谓的再教育营，被强迫劳动、绝育、被殴打等酷刑。中共对此极力否认，但也拒绝让联合国人权事务高级专员前往新疆调查；然而有集中营卫星图像，且有逃出的维吾尔人证词，证实人权组织所言确凿。
+
+消息来源:
+
+[維族女點聖火 中共侵人權難洗白](https://tw.news.yahoo.com/%E7%B6%AD%E6%97%8F%E5%A5%B3%E9%BB%9E%E8%81%96%E7%81%AB-%E4%B8%AD%E5%85%B1%E4%BE%B5%E4%BA%BA%E6%AC%8A%E9%9B%A3%E6%B4%97%E7%99%BD-160000297.html)
+
+[中共派維族選手當冬奧火炬手 美國批：分散種族迫害的關注](https://tw.news.yahoo.com/%E4%B8%AD%E5%85%B1%E6%B4%BE%E7%B6%AD%E6%97%8F%E9%81%B8%E6%89%8B%E7%95%B6%E5%86%AC%E5%A5%A7%E7%81%AB%E7%82%AC%E6%89%8B-%E7%BE%8E%E5%9C%8B%E6%89%B9-%E5%88%86%E6%95%A3%E7%A8%AE%E6%97%8F%E8%BF%AB%E5%AE%B3%E7%9A%84%E9%97%9C%E6%B3%A8-01)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
 
  
 
