--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,29 +1,23 @@
 ---
-title: 八孩女智障还是政府智障? 强奸犯的“英雄故事”被官方作为正能量来宣传
+title: 巴布亚新几内亚总理打过3针疫苗在北京确诊阳性
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968023/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968127/)
 
-作者：东京樱花团/Ob
+整理编辑：东京樱花团/peterwong
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/八孩女智障还是政府智障.png)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/巴布亚新几内亚总理打过3针疫苗在北京确诊阳性.png)[图片来源](https://www.rnz.co.nz/international/pacific-news/412291/png-to-close-borders-after-confirmation-of-first-covid-19-case)
 
-在北京冬奥开幕式期间，徐州丰县铁链锁脖八孩母亲骇人故事在互联网掀起的怒潮淹没，事发经过是这样的，徐州丰县一老农董某是当地小有名气的网红，他一人养八孩的英雄故事被当地官方作为正能量拿来宣传，他的家成了当地博主晒关爱的打卡点，董某也骄傲地在博主视频中宣讲自己的育儿经验。
+巴布亚新几内亚总理办公室2月6日宣布，总理马拉普原定于4日出席北京冬季奥运开幕式，但他于3日抵达北京后发现确诊中共病毒（COVID-19），之后被隔离。
 
-不巧的是，一位博主坚持要拍八孩的母亲，结果拍到了一幕令人惊悚的画面，在一件猪圈般小土坯房里，八孩母亲被铁链拴着脖子，零度的气温母亲衣衫单薄褴褛，土炕上只有一个冷馒头。这就是被英雄爸爸称作智障妈妈的生活场景。
+巴布亚新几内亚总理办公室6日透过Facebook声明指出，“马拉普（James Marape）总理3日晚间抵达北京后，发现其中共病毒（2019冠状病毒疾病）采检结果呈阳性。受到防疫限制影响，他将放弃本趟出访行程的法国部分。马拉普预计今天返国，但未透露关于他健康情况的任何进一步细节。”
 
-很快真相慢慢浮出水面，这是一起涉嫌人口拐卖，非法囚禁，强奸轮奸等多重刑事罪的案例。人们更发现该村不只有一个被铁链拴起来的女子，而同样命运的女子在徐州还有很多；这就令人怀疑当地是否存在一个被官方默许的人口买卖和性奴市场。
+根据巴布亚新几内亚中共病毒（COVID-19）国家疾控制中心官网上的声明，马拉普已于1月24日接种中共病毒疫苗追加剂。
 
-网友@蔡慎坤发帖说：“徐州朋友说：这一条罪恶的产业链由来已久，现在依然没有绝迹！这是许多人包括官方都知道的秘密：除了黑恶势力还有公职人员参与。先是强暴被拐女性，再逼其卖淫牟取，最后才贱卖到穷乡僻壤。（中国）每年100多万人走失，20多万少年儿童失踪，找回来的寥寥无几，妇女和女孩大多被拐卖到像丰县这样的穷山僻壤，要么沦为性奴要么沦为生殖工具！她们被凌辱被折磨当牲口一样圈养，甚至被打傻被逼疯。命运被改变人生被毁灭！”
+马拉普5日在北京与中共国国务院总理李克强举行线上会晤，商讨加强双边经济合作事宜。会后中共国驻美国大使馆发布联合声明，称中共国与巴布亚新几内亚同意强化贸易、投资、能源、资源与基础建设等领域的合作。
 
-网友@陈酿数据库发帖说：“在过年前的这一周，我国一度十分流行并且没人深究的买卖儿童和拐卖妇女的事情，火了起来。岁月静好的国人突然惊讶的发现，原来就在我们身边，在山西，在河北，在江苏，有那么普遍且成熟的买卖妇女儿童产业链，有配套齐全的户口登记系统和婚姻登记系统。所谓民风纯朴的农村，家家户户齐心协力的吃人。所谓热情好客的乡镇，随时就可以把你卖进深渊。一点都不令人意外的是，这些事其实到今天依然十分普遍。”
+消息来源:
 
-网友@荒川纯发帖说：“陈述一下我知道的现实：丰县是我老家，我们村子就有三个妇女是被拐卖来的。小学好朋友的妈 妈因为逃跑被砍掉一只手，印象中每次去朋友家玩她都是沉默着做事，用残缺的手臂包饺子，被拐来的妇女也大都是来自云贵川，有的人被丈夫喂药，有的被殴打沉默。”
-
-对于这种灭绝人性又被许多人视为寻常的恶劣事件，村一级可以愚昧、镇一级可以护短、县一级可以粉饰，市一级呢？省一级呢？国家一级呢？难道都跟村一级一个水平？全世界关心妇女权益和做人基本权利的人们都众目睽睽地盯着呢。平头百姓们要不要脸的可以无所谓，有头有脸经常在外面混的头面人物们脸上肯定会挂不住。
-
-当地官方刚刚发布的第二份通报里说，八孩妈妈是八孩爸爸的父亲在路边捡回来的智障女，这种表述是对第一份通报里关于八孩妈妈不是被拐卖的妇女的补强说辞。即使按照这种表述，八孩爸爸仍然涉嫌另一种犯罪，即强奸罪。
-
-不是八孩女智障更不是政府智障，这是赤裸裸的邪恶，是毫无底线的共同犯罪。厚颜无耻的婊子总是擅长从腐泥烂虾中找寻一丝丝的闪光点大肆标榜。既当婊子又立牌坊这是中共的一贯策略，不要因为他立的牌坊多么富丽堂皇，他的宣传多么伟光正，就忽视了他的邪恶。婊子就是婊子，共产党是比婊子还婊子的婊子，无耻不要脸到极致。可悲的是，无数中国人还深迷在中共的迷魂幻境中，深信党的伟大和厉害。我早已无法抑制内心的感慨中国人的智商是怎么了?！。
+[巴纽总理在北京确诊COVID-19 取消后续访法行程](https://tw.news.yahoo.com/%E5%B7%B4%E7%B4%90%E7%B8%BD%E7%90%86%E5%9C%A8%E5%8C%97%E4%BA%AC%E7%A2%BA%E8%A8%BAcovid-19-%E5%8F%96%E6%B6%88%E5%BE%8C%E7%BA%8C%E8%A8%AA%E6%B3%95%E8%A1%8C%E7%A8%8B-112653663.html)
 
 *编辑：东京樱花团/喜马拉雅的微尘
 发布：东京樱花团/老黑*
