--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,32 +1,31 @@
 ---
-title: 2022年2月6日 晚 新中国联邦新闻、GTV新闻访谈简报
+title: 美国发出警告：中俄结盟抗美 后果严重！
 ---
-`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/1968020/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968122/)
 
-作者：香草山翻译部
+整理编辑：东京樱花团/peterwong
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEW-GTV-MOS-LOGO-3.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/美国发出警告：中俄结盟抗美-后果严重！.png)[图片来源](https://www.theguardian.com/us-news/2021/jan/20/biden-press-briefing-jen-psaki-white-house-secretary)
 
+针对中俄结盟抗美的联合声明，美国和北约作出回应。美国白宫提醒中共，如果俄罗斯与乌克兰爆发武装冲突，这将会影响到中共国的国际利益。北约领导人果断拒绝了中俄要求北约停止东扩的主张。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/text-SC-5.png)
-校对：Stay文苑
+白宫新闻秘书莎琪周五（2月4日）对记者表示，“我们已经（向中方）传达了一个信息：欧洲如果发生一场破坏稳定的冲突，这将会影响到中共国在世界各地的利益，中共国当然应该明白这一点。”
 
-编辑：Stay文苑
+莎琪说，美国和中共国保持“很高层级的直接接触”。“我们目前关注的焦点是继续团结盟友和合作伙伴，一旦俄罗斯入侵乌克兰，（我们将共同）作出果断回应。”
 
-发稿：Stay文苑
+斯托尔滕贝格表示，北约正在密切关注着中共国和俄罗斯加强军事合作的动作。
 
-新闻： [https://gtv.org/broadcast/watch/620076043621aa7415d6dac6](https://gtv.org/broadcast/watch/620076043621aa7415d6dac6)
-访谈： [https://gtv.org/broadcast/watch/62007fd13621aa7415d6e11d](https://gtv.org/broadcast/watch/62007fd13621aa7415d6e11d)
+俄罗斯总统普京周五与中共国国家主席习近平发表了联合声明，对北约东扩表示反对。俄罗斯在俄乌边界部署十几万大军向乌克兰施压。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-callendar.jpeg)
+美国负责东亚和太平洋事务的助理国务卿丹尼尔·克里滕布林克（Daniel Kritenbrink）周五对媒体表示，如果俄罗斯选择对乌克兰再次入侵，这将会致中共于非常“尴尬的”境地，因为这就意味着中共国愿意“容许或者是默许”俄罗斯对乌克兰进行胁迫。
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+消息来源:
 
+[中俄结盟麻烦多，白宫提醒北京小心后果](https://www.voachinese.com/a/u-s-warns-conflict-would-hurt-china-s-interests-ukraine-update-20220205/6428010.html)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
