--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,35 +1,32 @@
 ---
-title: 有声&#124;G系列产品将成为全球最佳金融避险港湾
+title: 中日财经爆&#124; 美国将中共国进口光伏设备关税延长4年
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1967992/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968066/)
 
-配音：香草山健身部 – 玫瑰园
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-郭文贵先生在2月4日的大直播中谈到美国社会的三大基础:
+整理编辑：东京樱花团/peterwong
 
-1. 1.5美金的面包和4美金的油价保持稳定；
-2. 律师和会计师的生活成本必须得到维持；
-3. 大企业的稳定，卡车指数等。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/美国将中共国进口光伏设备关税延长4年.png)[图片来源](https://www.crushpixel.com/stock-photo/engineer-working-on-checking-maintenance-2787861.html)
 
+美国总统拜登周五（2月4日）将川普时期主要针对中共国的进口光伏设备关税延长四年，但作为对安装商的一项重大让步，拜登也放宽了条款，将在美国大型项目中占据主导地位的面板技术排除在征税范围之外。
 
-这三个因素影响了整个美国社会的稳定与动乱。当下，虽然有些因素正在蠢蠢欲动，但大多数情况属于个体突发情况，最坏的时刻还未到来。
+根据白宫声明，这项延长四年的关税豁免了双面太阳能板(bifacial panel)，这种电池板可以两面发电，颇受大型开发商青睐。在川普开始征收关税时，这种技术刚刚起步，但现已用于多数美国大型太阳能设施。
 
-郭先生警示道，当信用卡和银行烂账危机同时出现之时，便是美国经济便崩塌之日，郭先生表示5月份之后这些危机会依次显现。与此同时，喜系列、G系列会有一系列的战略部署，如GVision和Gettr Pay的上线。
+拜登政府还为来自邻国加拿大和墨西哥的免税供应打开了通道，这两个国家目前占美国的进口量不到1%。
 
-文字版原文：[G系列产品将成为全球最佳金融避险港湾](https://gnews.org/zh-hans/1966037/)
+前总统川普在2018年使用1974年贸易法案第201条规定的授权，对光伏产品进口产品实施了为期四年的关税措施，一开始税率为30%，在最后一年下降到15%，希望藉此在美国太阳能制造业创造就业机会。
 
-音频处理/发稿：Daxia
+这些措施原定2022年2月6日到期，但一些美国太阳能制造商去年寻求延期，认为他们的产品仍然无法与海外制造的商品竞争。这些商品主要来自中共国，在美国市场占据主导地位。他们举出一些不利因素，包括公司在关税生效前的进口囤积、中共病毒（新冠)疫情的经济影响以及成本上涨等。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpg)
+消息来源:
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
+[拜登政府将特朗普时期光伏进口关税延长四年 但条款有所放宽](https://cn.reuters.com/article/usa-solar-tariffs-0204-fri-idCNKBS2KC00J?il=0)
 
+[中日财经爆|美国考虑延长来自中共国太阳能进口关税](https://gnews.org/zh-hans/1922536/)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
 
  
 
