--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,28 +1,27 @@
 ---
-title: 有声&#124;三项物价指标直指美国经济崩塌节点
+title: 拜登放弃对伊朗制裁
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1967969/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968062/)
 
-配音：香草山健身部 – 玫瑰园
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-2月4日，郭文贵先生在大直播节目中透露，今年的三月份和五月份将是美国经济开始和加剧崩塌的两个主要节点，而汽油、面包和天然气等三项物价的变化则可以直接揭示出这一经济发展态势。
+翻译：  Evalu
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2-19.jpg)
+图片来源：posts.careerengine.us
 
-郭先生解释说，美国汽油、面包的价格不超过4美元，天然气价格不超过历史均价的20%，是维系普通美国民众生活稳定的三个重要因素。而这三项物价指标，是美国政治灾难具体发生的参照物。
+美国合众社2月5日报道，拜登政府重新恢复2015年谈判期间的放弃对伊朗的制裁。美国全国广播公司和CNN新闻均报道了国务院周五通知国会立法者对伊朗的民用核项目放弃制裁。
 
-文字版原文：[三项物价指标直指美国经济崩塌节点](https://gnews.org/zh-hans/1966034/)
+该放弃制裁决定将允许国家间在某些不扩散的情况下可以进行合作。这种不扩散活动将回到当时的国际核协议上，当时伊朗只需要几个星期就可以生产武器级别的核弹材料。
 
-音频处理/发稿：Daxia
+而伊朗否认其有生产核武器的计划。川普政府于2018年再认证到期前收回了奥巴马时代的联合全面行动计划，称这是一个核心部分缺陷的东西，重新实施制裁。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpg)
+由于撤除了该计划，伊朗已经添加了铀浓缩供应井，违背了原来的承诺并拒绝了国际原子能机构人员进入核心区域。
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
+有官员说：” 如果不放弃制裁，有关与第三方针对堆积物的处理方面的详细技术讨论和其他不扩散价值的活动就无法开展。
 
+本周早些时候，欧洲的合作者们在促进使美伊双方回到谈判桌上起了重要作用，国务院高级官员说根据目前伊朗的核项目，要回到2015年最初的协议将不太可能。
+
+##### 新闻来源： [Biden administration restores Iran sanctions waiver](https://www.upi.com/Top_News/US/2022/02/05/biden-restores-iran-sanctions-waiver-deadline-nuclear-deal-nears/6631644075537/)
+
+#  
 
  
 
