--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,33 +1,38 @@
 ---
-title: 冬奥会忙于平息检疫隔离投诉 朱易被网暴
+title: 中共的邪恶是自上而下自下而上的系统犯罪! 新华社主管谈“拐卖妇女”遭封杀
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1967881/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968047/)
 
-![2022北京冬奥会一位身穿防护服的工作人员，他身后是专门接送冬奥会人员的大巴士。](https://gdb.voanews.com/37eea58c-951d-4078-951d-1636235f9f91_w1023_r1_s.jpg)2022北京冬奥会一位身穿防护服的工作人员，他身后是专门接送冬奥会人员的大巴士。
-据美国之音2月7日报道，北京冬奥会期间，国际奥委会表示会尽力解决有关新冠病毒检测呈阳性的运动员被隔离的投诉，确保被隔离者有更好的生活条件、训练器材和因特网等，并消除隔离程序上的混乱。多个国家均有抱怨，并指责中共国不尊重运动员的人权。
+作者：东京樱花团/Ob
 
-中共当局采取“清零”式防疫政策，将参加冬奥会所有人员的活动限制在“气泡圈”的“闭环”之内，配戴N95口罩防护，并且每天检测。呈阳性的人员被送进隔离设施，直到通过检测阴性或由医疗专家小组审查，才能解除隔离。自北京冬奥会“闭环”1月4日启用以来，已经有435位与奥运有关的人员或在机场或在闭环内检测阳性。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/中共的邪恶是自上而下自下而上的系统犯罪-新华社主管谈拐卖妇女遭封杀.png)
 
-为了提升中共国在冬奥会上的成绩和奖牌数量，中共国招募了十多位外籍运动员“归化”。弃美籍加入中共国的“归化”花样滑冰女选手朱易，因在比赛中接连失误，影响了中共国团队名次，遭到中共国网友口诛笔伐。
+就在北京大力宣传冬奥之际，现任新华社对外部主任韩松指出，他认为人民最应该关注的不是冬奥，而是人口贩卖问题。此言论引发官方注意，目前韩松相关言论遭到封杀。
 
-中共对本国人民采取的是惨无人道的“清零“式防疫，直接把门焊死，把人隔离到饿死、病死、冻死的地步，对外国运动员已经格外仁慈。只是在民主国家享受自由的运动员无法接受中共的暴政，对中共国老百姓来说，对待外国运动员已经非常宽容了。
+新华社主管谈“拐卖妇女”疑遭封杀 韩松2月6日在微博发文称，“这几天我更关注的不是水门桥（长津湖第二集）也不是冰墩墩（北京冬奥吉祥物），是拐卖妇女的，是网上讲江苏丰县八个孩子妈妈被虐待精神失常疑遭拐卖的事情”。
 
-中共国的洗脑教育就是胜者为王败者为寇。虽然中共邪恶，但是中共最后夺取了政权，成为最后的赢家，就拥有了绝对的话语权。所以才有洗脑中共国人的那句俗语：不管黑猫白猫，能抓住耗子就是好猫。只要成功，一切都不是问题。如果失败，什么都是问题。朱易加入了中共国，但是没有让中共国的成绩突飞猛进，她必定会遭到谩骂和攻击。面对这种情况，不知道朱易会不会后悔她的选择？
+他指也有人翻出中国当代作家贾平凹接受《北京青年报》采访为拐卖妇女“辩护”。 “还有个视频，一个四川的叫曹小青的女的被拐卖，十五年被关在内蒙的一个窖洞里，吃喝拉撒都在同一个铁锅里完成，生存环境跟猪圈一样。是倒手卖了四次，最后是一对刘姓兄弟花六千元买来，做‘共妻’。他们没钱娶老婆。想跑被抓回来，毒打。生了两个孩子，墙上写满跑字。被解救时基本精神失常了”。
 
-新闻参考链接：[https://www.voachinese.com/a/olympic-organizers-address-complaints-about-isolation-hotels-20220206/6429794.html](https://www.voachinese.com/a/olympic-organizers-address-complaints-about-isolation-hotels-20220206/6429794.html)
+“另外还有一些报导说，那些被拐妇女距离派出所、乡政府可能就几百米、一公里，但就是跑不出去。”他感慨说道，“这都是二十一世纪元宇宙元年女航天员在太空中讲课了”。
 
-编辑：胖丁
+韩松并指出，上海一所名牌大学的女生、地区高考前几名、全国重点大学研究生班长，她为写论文去做社会调查，结果不行在郑州被人以两千四百八十块钱卖给一个弓腰驼背的中年农民，“成婚”后被关押七十一天没法逃脱。
 
-* * *
+此外，“贵州省一个妇联主任来解救一位被拐妇女，走在街上被几个当地人绑架了，在盗卖她的途中，妇联主任谎称自己也是盗卖人口的贩子，已把‘货’带来了并答应共同取‘货’，才乘机脱逃。看到这样的‘新闻’，我就觉得写那些机器人和外星人打来打去的科幻小说毫无意义。当个什么世界华人科幻协会会长羞死人了”。
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+维基百科显示，现年57岁的韩松，是中国科幻作家，生于重庆。历任新华社对外部记者，《了望东方》杂志副主编、执行总编，《中国军队》杂志编委；现任新华社对外部主任。其创作过十余部作品被翻译为英、日、义等多国文字，他曾说，“中国的现实比科幻还科幻”。 目前韩松的相关贴文已遭移除，原因不明。韩松针对此事未做出回应。
 
+网络流传法学教授罗翔的授课视频，罗翔指出，“根据中国法律，非法购买一只鹦鹉，最高判刑五年；非法购买一个或者一打（意思是众多）女人，最高判刑三年，相当于非法购买二十只癞蛤蟆的最高刑期。因此，中国女人的价值不如鹦鹉，仅仅与癞蛤蟆相当”。
 
-编辑：【英国伦敦喜庄园编辑部】
+没有自上而下自下而上的系统犯罪，邪恶不会如此猖狂；没有自上而下自下而上的系统犯罪，十亿关注度不会救不了他们；没有自上而下自下而上的系统犯罪，邪恶不可能铁板一块。中共就是一个国家犯罪集团，以黑恶势力掌控的国家幽灵。无数事实证明中共的犯罪越来越猖狂，越来越国际化，从最初循序渐进的“蓝金黄”渗透，“一腐一路”的债务绑架，再到公然掀翻美国大选直至公然投毒全世界，中共无恶不作。中共就是一个赤裸裸的犯罪集团，以犯罪为生的国际犯罪组织。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+信息来源：
+
+[惊传新华社主管谈“拐卖妇女”遭封杀](https://m.secretchina.com/news/gb/2022/02/07/997175.html)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
 
  
 
