--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,29 +1,27 @@
 ---
-title: 中共国无法补偿俄罗斯被制裁所遭受的损失
+title: 部分感染中共病毒的韩国人将可能无法参与总统选举投票
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1967876/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968026/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Unknown-6.jpg)中共国无法补偿俄罗斯被制裁所遭受的损失 网络图片
-据俄罗斯卫星通讯社2月7日报道，美国国家安全顾问杰克•沙利文表示，美国认为中共国无法补偿俄罗斯因乌克兰周边局势而遭西方国家制裁所受的经济损失。相信俄罗斯人和中共国都明白这一点。
+#### 撰稿：彩虹 
 
-如果俄罗斯决定入侵乌克兰，美国及其盟国将对其实施“前所未有的”经济制裁。如果中共国支持，也会让中共付出“一定的代价”。
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-612.png)图片来源：Time
+2月6日，《国家脉动》记者娜塔莉·温特斯（Natalie Winters）发文，报道韩国感染中共病毒（COVID-19）的选民将可能无法在韩国即将举行的总统选举中投票。
 
-经济侵略和地域扩张不可能让一个国家成为强国，只有发展和建设。俄罗斯和中共都是把扩张放在首位，发展放在次位。美国的强大在于先进的科技和持续的发展力。俄罗斯就算占领了乌克兰又如何？中共就算抢回了台湾又怎样？台湾先进的芯片技术就能完全复制粘帖吗？何况美国和西方世界也不会允许这种公然的侵略和扩张。中共国已经哀鸿一片，经济自顾不暇，根本没有能力解俄罗斯的围。全球因病毒和疫苗灾难而追责中共即将发生，中共的脖子已经套在了绞刑架上，何时勒紧绳索绞死中共只是时间问题。中共只能喊喊口号，威胁几句，根本没有实力对抗美国的制裁。
+文章引述《韩国先驱报》（The Korea Herald）的内容说：“人们对COVID-19（中共病毒）患者是否无法在第20届总统选举中投票的问题越来越关注，因为那些在邮寄选票登记期之后被确认感染病毒的人可能无法在3月9日到投票站报到。”
 
-新闻参考链接：[https://sputniknews.cn/20220207/1038720384.html](https://sputniknews.cn/20220207/1038720384.html)
+报道说，韩国的国家选举委员会（National Election Commission）有一个为期五天的窗口，接受邮寄选票的申请，在治疗中心居住的中共病毒患者和那些被隔离或自我隔离的人均可以使用。
 
-* * *
+《韩国先驱报》解释说：“在这段时间内登记的人将能够收到邮寄的选票，并通过向选举当局寄回选票来投票。”
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+但是，对于那些在国家选举委员会接受邮寄选票申请的窗口期之外感染了中共病毒的个人，就没有任何保障其投票选举的措施。
 
+但是，“有人警告说，到选举时，下个月每天新增的（中共病毒）病例可能超过十万例，这引起了人们的担忧，（这会导致）几十万选民无法在总统选举中投票。”对此，报道说，国家选举委员会正在讨论应对这一潜在危机的措施。
 
-编辑：【英国伦敦喜庄园编辑部】
+**新闻来源**
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
-
-
+[COVID Positive? In South Korea, You Might Be Barred From Voting](https://thenationalpulse.com/2022/02/06/covid-positive-people-may-be-barred-from-voting/)
 
  
 
