--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,19 +1,37 @@
 ---
-title: 【粤语配音】2022年2月6日：普京为何闪电离开冬奥会
+title: 中共统治下的人间惨剧
 ---
-`MOS香港部` [轉載自GNews](https://gnews.org/zh-hans/1967875/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1968025/)
 
-紐約香草山-香港部
+作者：香草山健身部-新世界的一员
+![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
+江苏丰县“八个孩子妈妈被虐待精神失常疑遭拐卖事件”持续在社交媒体发酵，阅读量高达近16亿次。但除官方通报与一众自媒体外，权威机构媒体——特别是以调查或深度报道见长的媒体，几乎集体失声。 由此1988年一个叫武勤英记者经过亲自查证撰写了《女研究生如何被拐骗?》——采访《沉重的思考——对11位女研究生被骗案的追踪采访》被再次挖掘，出现在公众面前。
+这是一篇在全国曾经引起过轰动的报道，一个女研究生因为撰写论文去农村采风，体验，被人贩子拐卖以后，被锁在屋中71天，屋里的床没有床板，是用高粱秆当床铺，上面铺了一床旧粗布单子。屋里没有一张桌子，一块破水泥板下面垫上一摞土坯就是一张桌子了，桌子上荡满了灰尘，来自上海的女研究生就在这样的环境下，被逼着与一个大字不识的、满脸萎琐的、窝窝囊囊的老农民结婚，她当然要拼死相争，就遭到了村里人的群殴，身强力壮的几个汉子揪住她的头发，扒掉她的鞋子，把她强行摁到床上强行进行奸污之事。
+悲剧的发生竟然是一个纯真、善良、毫无识别能力的高级知识分子遇见了一个因贫困而变的邪恶，无知加贪婪、就铤而走险的这么一个文盲的不法分子。无本钱的利润驱使下演绎出的这一个难以想象，是任何人听了都感觉激愤，撕心裂肺、痛不欲生的人间悲剧。
+花2480元就能买到一个水灵灵的大姑娘，在如此明显犯罪的实施中，买家和卖家竟然没有任何阻碍，而且在反抗时还有帮凶，逃跑就被锁住，这是有法律有法治的社会吗，这是中国共产党带来的惨无人道的流氓社会。
+如果买卖婚姻是被例入为犯罪，是必须被判重刑的话，是可以杜绝的，如果不是当地政府部门睁一只眼闭一只眼，是不可能被非法长时间关锁的，如果中共选的村干部但反有一点点人性，就不可能出现村里几个人合帮的奸污罪事，如果农村不是如此贫困如此封闭，就不会有如此惨剧的发生，农民在文化、经济、精神的三重贫困下造成的愚昧，犯下了这惨无人道的罪恶。
+是中共践踏文化，控制经济，法律虚设，导致悲剧重复重演，中共不灭，地狱之门永无法关闭。
+据武勤英当时查看的郓城县公安局1988年《关于打击拐卖人口、解救妇女儿童的情况报告》里面有这样的记载：
+在我县被拐卖的妇女中，有9名因抗拒成婚，不堪受辱而自杀。”在大人乡徐庄村、王井乡王皮村，两名少女都是在卖身的5天之内自杀的。至今尚未查明死者的身份和地址。
+一位怀孕7个月的外地妇女来菏泽看牡丹花会，被犯罪分子骗卖。因不同意与买主同居，而被买主兄弟数人扒光衣服按在床上，当众让买主强奸。
+郭屯镇傅宦屯村傅东良，男30岁，以800元钱买一11岁的幼女(四川人)同宿奸淫半年之久。”
+由于拐卖人口的犯罪活动，杀人、伤害、强奸等刑事案件不断发生。杨庄集乡程屯村一男青年将买来不从逼婚的‘媳妇’连砍7刀，造成重伤。”
+被拐卖女方不从逼婚而被转手倒卖的案件也时有发生。湖北省红安县一38岁妇女被拐卖到郓城后，半年时间被倒卖8次，每次转卖都抬高价格，由最初的700元抬到1700元。
+这份公开的报告上记载着这样的数字：自1978年至今(1988年)，共有2700余名外地妇女流入该县。其中14岁以下16名，14—18岁75名，18岁以上1900余名。其中未婚妇女占70%，已婚的占30%。
+而这些数据还是几十年前的数据，在伟光正的党旗下，贩卖人口的案例一路有增无减，如今怕是连真实数据都未必能得到。
+针对如此的社会丑恶现象，竟然数十年不曾改变过，多少家庭因此家破人亡，良知的笔尖流淌出来的是带血的笔锋，唯有发挥出匕首投枪般的锋利，才是射向共产党心脏的子弹！
 
-这一次大家看到普京是唯一一个给习(近平)撑场子的，这绝对是上千亿美元已经付过的钱，说好48小时，后来又一个延伸，说48小时能不能再加长一点儿？为什么？提高战略全天候伙伴的质量。那它4000多亿美元的天燃气合同咋回事呀？它(天燃气合同)不是一年的兑现，还有一个不在中俄贸易清单里，好多合同签的是国际贸易，说白了就给普京的钱，不能算在中俄贸易里面去。
+校对/发稿：菩提树
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2月-2.jpg)
+**更多资讯，更多关注**
 
-普京这回去了，你想想，普京是说好要待超过，从48小时到56小时甚至到60小时，而且要第一个重大宣布，俄罗斯开始把中共人民币作为俄罗斯的法币，第二个货币流通，来抵挡美国的所谓的制裁，而且俄罗斯知道美国一定会经济制裁的，这么大事没签，那可不是从48小时变成9小时那么简单，兄弟姐妹们。
+[**纽约香草山农场GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-第二，只有咱们告诉你，就连外交部报给习当时几个人得这个病毒知道么？四个人，没有一个人报上去说大楼有人死亡，直到昨天，习才知道有人在楼里死了，那另外一个就是这十几个人，这十来个人都是普京身边染上的，普京恼火啊，俄罗斯的要求是绝对独立的保护和医疗措施进入到北京，习和他之间连握手这个环节都要免了的，最后给染上以后他恼火了。
+[**纽约香草山农场GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
 
-更重要的事情，中国人民币在俄罗斯关于汇率对价，中方曾经承诺，任何情况下俄罗斯停止使用人民币的时候，中方将按照黄金计算本位，中共国不干，普京说我来之前你干，我来了你就不干了，这就是你们中国共产党
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
 
-所有共产党对西方的这种憎恨，习太阳对西方的憎恨，全部表露无遗，这已经不是冬眠会了，真的已经不止冬眠会这么差了，这次冬奥会的开幕式就开成了共产党结束的闭幕式，中国人2008年奥运会所有的成功，一秒钟在那奥运会之间全完，新中国联邦人这次可以这么说，主导了整个冬奥会的开幕式，我们很成功的让这些国家的运动员和这些元首们，看清了中共，看清了冬奥会，让他们一生不会再跟共产党参加的任何所谓的国际仪式，这就是普京离开的原因。
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
