--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,32 +1,33 @@
 ---
-title: 草根小哥激动的无法用言语来形容了（下）
+title: 冬奥会忙于平息检疫隔离投诉 朱易被网暴
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1967827/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1967881/)
 
-整理：雅典娜速记组
-编辑：皮特
-![](https://assets.gnews.org/wp-content/uploads/2022/02/草根小哥激动的无法用语言表示（下）_01.jpg)
-直播时间：2022.01.26
+![2022北京冬奥会一位身穿防护服的工作人员，他身后是专门接送冬奥会人员的大巴士。](https://gdb.voanews.com/37eea58c-951d-4078-951d-1636235f9f91_w1023_r1_s.jpg)2022北京冬奥会一位身穿防护服的工作人员，他身后是专门接送冬奥会人员的大巴士。
+据美国之音2月7日报道，北京冬奥会期间，国际奥委会表示会尽力解决有关新冠病毒检测呈阳性的运动员被隔离的投诉，确保被隔离者有更好的生活条件、训练器材和因特网等，并消除隔离程序上的混乱。多个国家均有抱怨，并指责中共国不尊重运动员的人权。
 
-还有咱们的这个甜蜜蜜行动啊，这些一定要正常举行啊！
+中共当局采取“清零”式防疫政策，将参加冬奥会所有人员的活动限制在“气泡圈”的“闭环”之内，配戴N95口罩防护，并且每天检测。呈阳性的人员被送进隔离设施，直到通过检测阴性或由医疗专家小组审查，才能解除隔离。自北京冬奥会“闭环”1月4日启用以来，已经有435位与奥运有关的人员或在机场或在闭环内检测阳性。
 
-有一点就是说这个经过爆料革命这几年，我相信这个每位战友都拥有的一个常识，那就是维护政治主体（公平正义合法），不是任何产权资本家政治家的这个义务。
+为了提升中共国在冬奥会上的成绩和奖牌数量，中共国招募了十多位外籍运动员“归化”。弃美籍加入中共国的“归化”花样滑冰女选手朱易，因在比赛中接连失误，影响了中共国团队名次，遭到中共国网友口诛笔伐。
 
-这次全世界配合七哥这次正义的这个行动，我相信七哥一定付出了太多太多的这个代价吧！
+中共对本国人民采取的是惨无人道的“清零“式防疫，直接把门焊死，把人隔离到饿死、病死、冻死的地步，对外国运动员已经格外仁慈。只是在民主国家享受自由的运动员无法接受中共的暴政，对中共国老百姓来说，对待外国运动员已经非常宽容了。
 
-政治是交易的艺术，我想不到有任何一个国家任何一个组织能够做到让全世界第一大国美国与这个世界第一大人口第二大经济体的这个中国脱钩，我不相信有任何国家，对吧？
+中共国的洗脑教育就是胜者为王败者为寇。虽然中共邪恶，但是中共最后夺取了政权，成为最后的赢家，就拥有了绝对的话语权。所以才有洗脑中共国人的那句俗语：不管黑猫白猫，能抓住耗子就是好猫。只要成功，一切都不是问题。如果失败，什么都是问题。朱易加入了中共国，但是没有让中共国的成绩突飞猛进，她必定会遭到谩骂和攻击。面对这种情况，不知道朱易会不会后悔她的选择？
 
-但是关键是郭先生一个人能够做到这件事，就是真是实在是太伟大了！
+新闻参考链接：[https://www.voachinese.com/a/olympic-organizers-address-complaints-about-isolation-hotels-20220206/6429794.html](https://www.voachinese.com/a/olympic-organizers-address-complaints-about-isolation-hotels-20220206/6429794.html)
 
-我这个激动无法用言语来形容了！谢谢。
+编辑：胖丁
 
-发布：*皮特*
+* * *
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
