--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,27 +1,52 @@
 ---
-title: 中日财经爆&#124;中共国春节旅游人数和收入远不及疫情之前
+title: 加拿大数千人抗议新冠疫苗强制令
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968104/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1968215/)
 
-整理编辑：东京樱花团/peterwong
+翻译&评论：金生水
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2-29.png)图片来自网络
+《路透社》近日报道，在本周六（2月5日）数千人在包括金融中心多伦多在内的加拿大各城市游行，这是从首都渥太华蔓延开来的反对新冠疫苗强制的游行，大多数时候是和平的，但也不乏喧嚣时刻。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/中共国春节旅游人数和收入远不及疫情之前.png)
+“自由车队”最初是反对加拿大对跨境卡车司机的新冠疫苗要求的运动，但已变成反对公共卫生措施和总理贾斯汀特鲁多政府的集结点。
 
-中共国文化和旅游部数据中心测算称，春节假期七天全国国内旅游出游人数和旅游收入同比均大幅减少，远不及中共病毒（新冠）疫情前2019年水平。
+“我们都厌倦了生活在一个大监狱中的命令、恐吓和生活，”没有透露姓氏的多伦多抗议者罗伯特说。 “我们只想恢复正常，而不必将他们称为新冠疫苗的毒药注射入我们的血管。”
 
-春节假期七天（1月31日至2月6日），全国国内旅游出游2.51亿人次，同比减少2%，只恢复到中共病毒（新冠）疫情前2019年春节假日同期的73.9%。旅游收入2,891.98亿元人民币，同比减少3.9%，只恢复到中共病毒（新冠）疫情前2019年春节假日同期的56.3%。
+在过去的八天里，抗议者已经关闭了渥太华市中心，一些参与者挥舞着联邦或纳粹旗帜，还有一些人说他们想解散加拿大政府。
 
-中共国交通运输部称，春节假期七天，预计全国铁路、公路、水路、民航发送旅客1.3亿人次，比2021年同期增长31.7%，比2019年中共病毒（新冠）疫情前同期下降69.2%。
+“渥太华的抗议者已经表达了他们的观点。整个国家都听到了他们的观点，”交通部长奥马尔·阿尔加布拉说，他敦促抗议者“回家并与民选官员接触”。
 
-消息来源:
+渥太华警方说对四人提起了仇恨犯罪的起诉，还在和美国联邦调查局联合调查对公共人物的威胁。
 
-[**中国春节假期国内出游2.51亿人次同比减少2% 旅游收入同比降3.9%**](https://cn.reuters.com/article/spring-festival-travel-0206-sun-idCNKBS2KC01A?il=0)
+警方称，组织严密的封锁部分依赖于美国同情者的资助，周六抗议者带来了便携式桑拿浴室以对抗寒冷的气温。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
+数码媒体显示一男子骑在马背上，扛着特朗普旗。前美国总统特朗普发言支持卡车司机反对“以疯狂的新冠强制规定毁灭加拿大的极左精神病人特鲁多的严厉政策”。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+GoFundMe 周五关闭了自由车队的捐赠页面，称其因非法活动而违反了平台的服务条款。该集团筹集了约 1010 万加元。
 
+该网站最初表示，它将为 2 月 19 日之前提出的任何请求退款，并将剩余资金用于经过验证的慈善机构，但周六 GoFundMe 表示将自动退还所有捐款。
+
+特斯拉首席执行官埃隆·马斯克此前曾批评过新冠疫苗强制要求，他称 GoFundMe 为“职业小偷”。 佛罗里达州州长罗恩·德桑蒂斯和其他共和党州议员发誓要调查这家总部位于加州的公司。
+
+警方表示，渥太华约有五千人示威，数百人聚集在加拿大最大城市多伦多和魁北克市，恰逢该市一年一度的冬季狂欢节。周五晚一辆取货卡车冲进人群，四人受伤。
+
+据路透社一名目击者称，在多伦多，大约五百名医护人员和支持者在市中心集会反对卡车车队。
+
+多伦多的几名医护人员表示，鉴于抗议活动，他们收到了医院的建议，不要在公共场合穿医院工作服。
+
+急诊室医生拉古·维努戈帕尔告诉路透社：“我认为，我们必须以某种方式偷偷摸摸或害怕我们是谁以及我们在做什么的想法是冒犯和令人遗憾的，我认为这是对我们社会的悲哀评论。”
+
+一些渥太华居民因自己戴口罩而遭受了几乎无休止的鸣喇叭、砸碎窗户和骚扰，本周早些时候批评渥太华警方没有采取更多措施来结束封锁。一名居民对车队组织者提起集体诉讼，要求赔偿高达 1000 万美元的赔偿金和禁令以结束抗议活动。
+
+渥太华警察局局长周六表示，渥太华警方周五警告将镇压抗议活动并投入更多警力，但没有足够的资源来结束抗议活动。特鲁多本周早些时候排除了在首都对卡车司机使用军队的可能性。
+
+“这是一个被围困的城市，这是对民主的威胁，这是一场全国性的起义，这是疯狂的，”警察局长彼得斯洛利在警察局的董事会会议上说。 “我们已经尽力了。”
+
+新冠疫苗不是真正的疫苗，而是配合中共病毒杀人的二元武器。如果卡车司机这种注射实验性疫苗后有副作用谁负责呢? 而且加拿大总理特鲁多已经打了加强针，还是中招了。注射了第4剂新冠疫苗的人，也有感染了奥米克戎的。所以加拿大政府有什么科学根据或者是公共卫生的研究结果，要对卡车司机强制接种新冠疫苗呢？
+
+参考链接：
+
+[https://www.reuters.com/world/americas/canadian-cities-brace-more-anti-vaccine-mandate-protests-2022-02-05/](https://www.reuters.com/world/americas/canadian-cities-brace-more-anti-vaccine-mandate-protests-2022-02-05/)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
