--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,27 +1,21 @@
 ---
-title: GoFundMe：钱进我口袋就是我说了算
+title: 新中国联邦2022年发展的三个重点项目
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1967769/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1967766/)
 
-撰稿：小毛牛
-![](https://assets.gnews.org/wp-content/uploads/2022/02/trucker-protest-gofundme-cut-stefanovich-040222.jpg)网络图片
-众筹网站GoFundMe 表示：将扣留为抗议强制疫苗的加拿大卡车司机筹集的数百万美元，理由是警方报告了司机们的暴力行为。该众筹网站在一份声明中表示，将扣留已经捐赠的款项，并退还给填写申请表的捐赠者。可喜的是，另一个在线筹款平台 GiveSendGo 已宣布为车队捐款。
+撰稿：追着曙光跑
 
-自上周末以来，加拿大的自由车队一直在集会，预计多伦多和渥太华将举行更多的抗议活动。据报道：在参加卡车司机抗议的几千人中，迄今已有三人被捕。其中一人因携带武器；一人被控恶作剧罪名低于 5,000 美元；另一人因在社交媒体上发出威胁而被捕。
+2月6日，郭先生在大直播上强调，新中国联邦今年2022年发展的三个重点项目。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/WhatsApp-Image-2022-02-07-at-10.25.58.jpeg)
+第一，阻止排华事件的发生，这是新中国联邦今年的重中之重。如果新中国联邦阻止不了西方的排华，那么灭共了也没什么意义。现在需要用币招鼓励国内的各界人士站出来形成全国灭共的趋势，让他们在灭共中真正得到喜币和躺平币。
 
-GoFundMe 在周五的一份声明中表示：筹款活动刚开始时示威活动是和平的，但此后违反了禁止宣传暴力和骚扰的服务条款，我们现在有来自执法部门的证据，表明以前的和平示威已经成为一种占领，警方报告了暴力和其他非法活动。
+第二，把现有的项目做强做大，坚决不犯希特勒因无限扩张导致灾难性后果的错误。今年不会再立任何新项目，目标就是把现有的项目搞好做强，然后扩大在全球的影响力。
 
-众多本地居民对卡车司机们表达了同情，比如一位女士说，她对将抗议者描述为“种族主义者、厌恶女性者，甚至恐怖分子”感到愤怒。她还说，他们是各行各业爱好和平、遵纪守法的普通公民，只是受够了政府的不尊重和欺凌。
+第三、做好新中国联邦教育（GEDU）。教育是立国之本，是中国人未来的希望。新中国联邦会提供喜币或喜美元，吸引国内的教育工作者加入GEDU。套用一句俗语：走新东方的路，让新东方无路可走。
 
-斯图尔特是市中心一家餐馆的厨师说：我毫不怀疑绝大多数人是和平的。但是，正如去年在美国的抗议活动中所看到的那样，少数怀有恶意的人可以很容易地迅速使局势升级。
+2022年，新中国联邦无论是在国际还是在国内的影响力将会更强。
 
-一名印裔加拿大律师莫妮卡·乔汉说：有些人在我们家门前成群结队地走着，戴着‘让加拿大再次伟大’的帽子。我开始觉得我不想参与其中，有一种不安的感觉。
-
-新闻链接：[Freedom Convoy: GoFundMe seizes funds of Canada ‘occupation’](https://www.bbc.com/news/world-us-canada-60267840)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
-
-
+信息来源：[2022年2月6日 文贵大直播：开幕式后普京愤然离去；中俄战略合作虎头蛇尾；贩卖人口中国妇女地位；反疫苗运动及美国经济](https://gtv.org/video/id=61ffc26b3621aa7415d64d51)
 
  
 
