--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,21 +1,25 @@
 ---
-title: 新中国联邦2022年发展的三个重点项目
+title: 三个工作重心 &#124; 新中国联邦力图阻止反华，团结人心，做好教育
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1967766/)
+`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/1967443/)
 
-撰稿：追着曙光跑
+新西兰伊甸农场Gnews组 财经G乐部-亚伦
 
-2月6日，郭先生在大直播上强调，新中国联邦今年2022年发展的三个重点项目。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/WhatsApp-Image-2022-02-07-at-10.25.58.jpeg)
-第一，阻止排华事件的发生，这是新中国联邦今年的重中之重。如果新中国联邦阻止不了西方的排华，那么灭共了也没什么意义。现在需要用币招鼓励国内的各界人士站出来形成全国灭共的趋势，让他们在灭共中真正得到喜币和躺平币。
+2月6日，郭文贵先生于GTV、Gettr大直播中公布今年新中国联邦的三个工作重心，并表示，人生做再多正确的决定，若做错一次，有可能一切皆毁。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/bb0bd88f0d3f6f3856a10d3712ebbd29.jpg)图片来源Gettr
 
-第二，把现有的项目做强做大，坚决不犯希特勒因无限扩张导致灾难性后果的错误。今年不会再立任何新项目，目标就是把现有的项目搞好做强，然后扩大在全球的影响力。
 
-第三、做好新中国联邦教育（GEDU）。教育是立国之本，是中国人未来的希望。新中国联邦会提供喜币或喜美元，吸引国内的教育工作者加入GEDU。套用一句俗语：走新东方的路，让新东方无路可走。
+G系列生态圈是新中国联邦的核心力量，自王者GTV的诞生到Hcoin（喜币）目前500多倍的收益，再到0手续费Hpay（喜支付）的汇通天下，我们已经做的够多够优秀。所以，今年要把已有的项目做好，不再延展其他新的项目，避免无限扩张而引发灾难。这样新中国联邦可以把更多的精力集中在今年最大的挑战——排华问题，如何阻止世界范围的排华浪潮是新中国联邦的首要课题。阻止不了西方世界的排华骚乱，灭共也就失去了原本的意义。
 
-2022年，新中国联邦无论是在国际还是在国内的影响力将会更强。
+第二、要让国内更多的人参与到爆料革命，除了继续做好直播、文宣的工作，还会实施B计划，即让国内音乐界、教育界、军界、情报界、地方政府、企业界等也能得到Hcoin（喜币），未来也能按照使用标准享受到“躺平币”。届时，从东北的山沟到喜马拉雅的山脚，每个人都能闻到Hcoin（喜币）和“躺平币”的味道。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/c9acc3ac59b937e9d8ba81cf013107f5.jpg)图片来源Gettr
 
-信息来源：[2022年2月6日 文贵大直播：开幕式后普京愤然离去；中俄战略合作虎头蛇尾；贩卖人口中国妇女地位；反疫苗运动及美国经济](https://gtv.org/video/id=61ffc26b3621aa7415d64d51)
+
+由于小学博士习近平自身对真理和人性认知的局限性与掌握最高权力的巨大矛盾，深刻诠释了没有和能力、权力相匹配的教育，任何的成功一定是更大的灾难。
+
+所以第三、新中国联邦要把新中国人的G-EDU（G教育）做好，这是新中国的未来和希望。具体的激励政策是，凡是原新东方（或同等级别的）员工参与到G-EDU（G教育）的建设，将得到1.5倍原工资待遇，特殊贡献者甚至可以得到2倍原工资待遇，还可以选择用Hcoin（喜币）或者HDO（喜美元）支付工资，有意愿者请速与磐石农场联系。用按小时、按天、按周支付Hcoin（喜币）和HDO（喜美元）的实际行动做到走新东方的路，让新东方无路可走。
+
+魔鬼在咆哮，苍天在愤怒，G系列在拯救。世界经济和供应链的崩塌，新冠病毒和新冠毒疫苗对全人类的威胁，世界面临大重启，新中国联邦风景独好。
 
  
 
