--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,34 +1,90 @@
 ---
-title: 北京冬奥奥运团队开始对隔离酒店条件吐槽
+title: 为什么要抵制北京冬奥会？
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968080/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1968185/)
 
-编译：花岗岩
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-95.jpg)
-图片来源：网路图片
+翻译&评论：金生水
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-60.png)图片来自网络
+《BBC News》近日发表了一篇文章，汇总了关于本届冬奥会的一些争议以及为什么要抵制北京冬奥会。
 
-据美联社北京2月6日报道，一些不幸在北京奥运会上被检测出中共病毒（冠状病毒）阳性的奥运运动员认为他们的隔离条件使糟糕的情况变得更糟，食物不足，无法食用的饭菜，没有训练设备。
+**北京冬奥会和残奥会将在未来几周举行**
 
-俄罗斯冬季两项运动员瓦莱里娅·瓦斯涅佐娃（Valeria Vasnetsova）在Instagram上从北京的一个所谓的隔离酒店发帖说，“我的胃很痛，脸色很苍白，眼睛周围有巨大的黑眼圈，我希望这一切都能结束。我每天都在哭，实在太累了”。
+中共国的人权记录导致一些国家宣布外交抵制奥运会，这意味着他们的高级官员不会参加。
 
-她的问题不是病毒的任何症状，而是食物。瓦斯涅佐娃周四发布了一张她所说的 “已经吃了五天的早餐、午餐和晚餐 ”的照片，托盘上的食物包括普通意大利面、橙汁、骨头上的焦肉、一些土豆，没有蔬菜。
+**奥运会什么时候举行，规模有多大？**
 
-她说，她主要靠几块意大利面生存，因为“不可能 ”吃其他东西，“但今天我吃了他们提供的所有脂肪，而不是肉，因为我非常饿。”她补充说，她的体重下降了很多并且骨头已经显现出来了。
+冬季奥运会于 2 月 4 日至 2 月 20 日举行，约有 3,000 名运动员参加 109 个不同的项目。
 
-隔离酒店越来越成为此次奥运运动员及其团队的批评对象，他们正在游说组织者进行改进。隔离缺乏透明度，只有一些病毒呈阳性的运动员被迫进入其团队无法进入的隔离酒店，而处于类似情况的队友则被允许在奥运村内进行隔离。
+冬季残奥会于 3 月 4 日至 3 月 13 日举行，约有 750 名参赛者参加 78 项赛事。
 
-对检测出阳性的运动员的规定是，没有症状的人要到专门的酒店进行隔离。任何有症状的中共病毒患者将被送往医院。在这两种情况下，他们将不能参加比赛，直到被允许出院。
+冬奥会将在北京及其周边举行。中国政府将为此会费39亿美元。室内冰上项目将在北京的体育馆举行；相距北京75公里的延庆将举办高山滑雪、雪橇以及无舵雪橇的比赛；
 
-各国代表队已经开始公开批评。
+相距北京180公里的张家口将进行大部分的滑雪和滑板滑雪比赛。
 
-在三届北欧综合运动会金牌得主埃里克·弗伦泽尔检测出阳性后，德国代表团团长德克·希梅尔普芬尼格（Dirk Schimmelpfennig）对 “不合理 ”的生活条件进行了抨击。他在FAZ报纸报道的评论中说，德国希望有更大、更卫生的房间，以及更正规的食物供应，以便最终被释放的运动员仍然适合参加比赛。
+比赛将使用大约一百二十万立方米的人造雪，来弥补比赛地区降雪的不足。中共国也因此产生的环境影响而受到了批评。
 
-比利时俯式雪橇运动员金·梅勒曼斯被从隔离酒店带回了运动员村的隔离区，她的主要怨言是缺乏信息。她被装进一辆救护车，在她以为自己会被释放的那一天从一个隔离设施运到另一个隔离设施。
+由于中共病毒的影响，冬奥会的运动员和官员将会在一个安全的闭环内（活动）。现场比赛并不会对公众开放。
 
-瓦斯涅佐娃在隔离区的时间发现运动员们得到的食物更差，并用一张为她同样隔离的队医提供的食物图片强调了这一点。她不明白，为什么对运动员有这种态度？
+**哪些国家抵制奥运会？**
 
-新闻来源：[Olympic teams raise concerns over quarantine hotels](https://apnews.com/article/winter-olympics-quarantine-hotels-e2d2ffc60d9800cf1951cc3eaed323cb)
+美国、英国和加拿大以及印度、澳大利亚、立陶宛、科索沃、比利时、丹麦和爱沙尼亚都宣布了外交抵制。
 
+他们都派出了运动员，但没有部长或官员参加。
+
+美国称这是因为中共国“在新疆侵犯人权和暴行”—针对新疆穆斯林人口。
+
+英国国会议员伊恩·邓肯·史密斯代表议会对华联盟表示：“中国政府在西藏维吾尔地区实施工业规模的侵犯人权行为，并几乎每天都对台湾领空进行军事入侵。
+
+“我们不能为中共国的专制政权提供任何合法性。”
+
+印度宣布进行外交抵制，因为其中一名火炬手是一名中共国军官，他在两国边境与印度军队发生了一场致命的小规模冲突。
+
+日本也表示不会派部长参加奥运会，但会派出奥运官员。
+
+新西兰、奥地利、斯洛文尼亚、瑞典和荷兰没有派出政府代表，但表示他们的理由是中共病毒。
+
+法国一直反对抵制。 马克龙总统曾表示：“我认为我们不应该将这些话题政治化，特别是如果要采取微不足道和象征性的步骤的话。”
+
+世界各地也出现了人权活动人士反对北京奥运会的抗议活动。
+
+**对中共国的指控是什么？**
+
+北京政府被指控对西北省份新疆的维吾尔穆斯林人口实施暴行。
+
+人权组织认为，过去几年有超过一百万维吾尔人被关押在中共国所谓的“再教育营”的大型网络中，数十万人被判入狱。
+
+他们说，有证据表明维吾尔人被用作强迫劳动，妇女被强制绝育。 一些前集中营被拘留者声称他们受到了酷刑和性虐待。
+
+北京还被指控通过包括香港国安法在内的新立法限制香港人民的自由。
+
+人权观察在其 2021 年年度报告中表示，“北京的镇压，坚持对中国共产党的政治忠诚，在全国范围内加深”。
+
+**中共国是如何应对的？**
+
+中共国一直否认在新疆侵犯人权，并警告其最直言不讳的指责者，如美国和德国，不要干涉其在香港的“内政”。
+
+反对美国外交抵制的声音最为响亮。
+
+中共国外交部表示，美方“明显违背奥林匹克精神”，“将为自己的错误行为付出代价”。 但是，他们从未说明美国会付出什么样的代价。
+
+**关于手机的警告有哪些？**
+
+运动员和其他冬奥会的参与者被警告说，他们每天不得不使用的新冠监控手机程序存在安全风险。
+
+网络安全组织公民实验室表示，该应用程序的加密系统较弱，其上加载的数据（例如医疗和旅行历史）可能会被黑客利用。
+
+据报道，一些国家告诉运动员将主要设备留在家中，并在奥运会上使用预付费电话。
+
+中共官媒否认了这些担忧。
+
+中共投资北京冬奥上的这些钱，都是中国人民的血汗钱，都是搜刮的民脂民膏，并不是中共理所应当可以随便用的钱。这样的面子工程重要，还是用这些钱改善中国人的实际民生更重要？如果用这些钱去救济那些吃不上饭的老人，或者救济一下那些没人管的孩子，是不是会把这三十几亿用的更有价值？
+
+除此以外中共还在新疆集中营、香港运动等人权问题上犯下滔天大罪，海内外任何有良知的人都应该抵制北京冬奥！为什么要为魔鬼政权买单呢？
+
+参考链接：
+
+[https://www.bbc.com/news/explainers-59644043](https://www.bbc.com/news/explainers-59644043)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
