--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,27 +1,26 @@
 ---
-title: 拜登放弃对伊朗制裁
+title: 七哥谈中共和哈萨克斯坦（二）
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968062/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968166/)
 
-翻译：  Evalu
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2-19.jpg)
-图片来源：posts.careerengine.us
+整理：雅典娜速记组
+编辑：tianzhihuan
 
-美国合众社2月5日报道，拜登政府重新恢复2015年谈判期间的放弃对伊朗的制裁。美国全国广播公司和CNN新闻均报道了国务院周五通知国会立法者对伊朗的民用核项目放弃制裁。
+哈萨克斯坦，这个整个纳扎尔巴耶夫你看看他全家几乎都是什么油、气、通信，你但凡去过那个国家，你感觉这个国家就是他一家人的，不但是石油。能源、矿业，他都弄着啊，就连那个首都的夜总会，你一查都是女婿的，什么侄子的全都是。
 
-该放弃制裁决定将允许国家间在某些不扩散的情况下可以进行合作。这种不扩散活动将回到当时的国际核协议上，当时伊朗只需要几个星期就可以生产武器级别的核弹材料。
+我喝完酒以后，晚上到他们夜总会去，他们的夜总会是在楼上，不像中国人夜总会在楼下。中国人有个习惯思维，所以就在地下。移到地上，就是很高级了，警察保护了他们，说在最顶楼，中间这转盘，那个真的是就像青青草原的脸，那个美女漂亮啊，咔咔跳，舞花一进去以后，他们在一个转的台子上跳啊，各种舞蹈，那个音乐，进去以后你情不自禁的就开始跟着晃起来了，然后这边就人家就端着来了，他们好厉害呢夜总会啊，比七哥那个裕达俱乐部厉害，比盘古还厉害，人家那跨过来又端着盘子，你都不知道，就一个盘子上就放了10个杯子或者7个杯子，但你拿那个杯子的旧跟别人的杯子绝对不一样，它就会那么巧妙，都是那种黑珍珠，300年的黑珍珠。我在喝的香槟，都是超级酒就给你上来了。你说他有多腐败这个国家啊，那一顿晚饭下去啊，都是上百万美元。
 
-而伊朗否认其有生产核武器的计划。川普政府于2018年再认证到期前收回了奥巴马时代的联合全面行动计划，称这是一个核心部分缺陷的东西，重新实施制裁。
+然后，这总统的家人，就是在场的时候，都是警察，他们叫做桂军，就是特种秘密部队的人，就在旁边护着我们，而且好多也是女的。而且给我讲海南话，讲郭先生您好，然后讲呀我们每年都到海南去度假啊。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥谈中共和哈萨克斯坦（二）-.jpg)
+2022年1月7日文贵大直播
 
-由于撤除了该计划，伊朗已经添加了铀浓缩供应井，违背了原来的承诺并拒绝了国际原子能机构人员进入核心区域。
-
-有官员说：” 如果不放弃制裁，有关与第三方针对堆积物的处理方面的详细技术讨论和其他不扩散价值的活动就无法开展。
-
-本周早些时候，欧洲的合作者们在促进使美伊双方回到谈判桌上起了重要作用，国务院高级官员说根据目前伊朗的核项目，要回到2015年最初的协议将不太可能。
-
-##### 新闻来源： [Biden administration restores Iran sanctions waiver](https://www.upi.com/Top_News/US/2022/02/05/biden-restores-iran-sanctions-waiver-deadline-nuclear-deal-nears/6631644075537/)
-
-#  
+*发布：tianzhihuan*
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
